*Empty MediaWiki Message*

--- a/ནང་ཆོས།.mw
+++ b/ནང་ཆོས།.mw
@@ -175,18 +175,44 @@
 === ལམ་གྱི་བདེན་པའི་སྐོར། ===
 <big>'''ལམ་བདེན་གྱི་ངོ་སྤྲོད།''' མི་ལོ་གསུམ་སྟོང་ལྔ་བརྒྱ་གི་ཧེ་མ་ བདག་ཅག་གི་སྟོན་པ་སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་མཆོག་ ཡུལ་རྡོ་རྗེ་གདན་ བྱང་ཆུབ་ཤིང་གི་རྩ་བར་སངས་རྒྱས་ཀྱི་ས་ལུ་གཤེགས་ཡོད་རུང་ ཞག་བདུན་ཕྲག་བདུན་གྱི་རིང་ལུ་ཆོས་མ་གསུངས་པར་བཞུགས་ཡོདཔ་ཨིན། ཨིན་རུང་ ལྷ་ཚངས་པ་དང་ བརྒྱ་སྦྱིན་ལ་སོགས་པ་གིས་ འབུལ་བ་གསེར་དངུལ་ནོར་སོགས་ཕུལ་ཐོག་ལས་ སངས་རྒྱས་ལུ་ ཆོས་འཁོར་བསྐོར་དགོ་པར་གསོལ་བ་བཏབ་པ་ལུ་བརྟེན་ སྟོན་པ་བཅོམ་ལྡན་འདས་ཀྱིས་ཡང་ གསོལ་བ་བཏབ་པ་པོ་རྣམས་ཀྱི་ངོ་བོ་ལུ་ རང་ཟླ་ ༦ པའི་ཚེས་ ༤ ལུ་ཆོས་འཁོར་བསྐོར་ནི་ཨིན་པར་ངོས་ལན་མཛད་གནང་ནུག། དེ་ཡང་ ཆོས་འཁོར་དང་ བདེན་པ་བཞིའི་ཆོས་འཁོར་ལས་ཙམ་ཏེ་ མཚན་ཉིད་མེད་པའི་ཆོས་འཁོར་དང་ ཆོས་འཁོར་མཐའ་མ་ལེགས་པ་རྣམ་པར་ཕྱེ་བའི་ཆོས་འཁོར་ཏེ་ གཙོ་བོ་ཆོས་འཁོར་གསུམ་སྦེ་བསྐོར་བར་མཛད་ཡོདཔ་ཨིན། ལམ་གྱི་བདེན་པ་འདི་ ཆོས་འཁོར་ཆེན་པོ་གསུམ་གྱི་ནང་ལས་ ཆོས་འཁོར་དང་པ་ བདེན་པ་བཞིའི་ཆོས་འཁོར་གྱི་སྐབས་ལུ་གསུངས་ཡོདཔ་ཨིན། འཁོར་བ་འདི་ སྡུག་བསྔལ་གྱི་རང་བཞིན་ཨིན་པ་ལུ་ ཨིན་པར་ཤེས་ཞིནམ་ལས་ སྡུག་བསྔལ་བྱུང་བའི་རྒྱུ་ཀུན་འབྱུང་སྤངས་ཐབས་ལུ་ ལམ་བདེན་འདི་ལུ་ངེས་པར་བསྟེན་དགོཔ་ཨིན། ལམ་བདེན་འདི་ དྲན་པ་དང་ཤེས་བཞིན་གྱི་ཐོག་ལས་བསྟེན་པ་ཅིན་ ཕུན་སུམ་ཚོགས་པའི་སངས་རྒྱས་ཀྱི་ས་ཐོབ་པ་ལུ་ དོགས་པ་ཙ་ལས་མེད། སྤྱིར་བཏང་ལམ་ཟེར་མི་འདི་ འགྱོ་སའི་ལམ་ཅིག་ལུ་གོ་ནི་ཨིན་རུང་ ད་ལྟོའི་ལམ་བདེན་འདི་ འགྲོ་བ་ཀུན་གྱི་བསྟེན་དགོ་པའི་སྤང་བྱ་དང་བླང་བྱ་གཉིས་ཀ་དང་ལྡན་པའི་ལམ་ ཐེག་པ་ཐམས་ཅད་ཐུན་མོང་ཨིན་པ་ཅིག་ལུ་གོ་ནི་ཨིན། སྤྱིར་བཏང་ སྒྲ་བཤད་ཀྱི་སྒོ་ལས་ལམ་ལུ་ ཟག་བཅས་ཀྱི་ལམ་དང་ ཟག་མེད་ཀྱི་ལམ་སྟེ་ གཉིས་ལུ་དབྱེ་བ་ཕྱེ་ནི་ཡོད་རུང་ ཟག་བཅས་འཇིག་རྟེན་གྱི་ལམ་འདི་ སྡུག་བསྔལ་དང་ ཀུན་འབྱུང་བདེན་པ་གི་ནང་ལུ་བསྡུ་ནི་འདི་གིས་ ལམ་ཙམ་མ་གཏོགས་ལམ་བདེན་ངོ་མ་མེན། ད་ལྟོ་ སྐབས་སུ་བབས་པ་ཟག་མེད་ཀྱི་ལམ་བདེན་བཤད་ནི་ཨིན་མི་འདི་ ཟག་བཅས་ཀྱི་ལས་ཟད་ནིའི་གཉེན་པོ་དང་ རང་ཉིད་འབྲས་བུ་སངས་རྒྱས་ཀྱི་ས་འཐོབ་ནི་གི་བསྟེན་བྱའི་རྒྱུ་ཨིན་ནི་འདི་གིས་དང་ བྱང་སེམས་འཕགས་པ་ཚུ་གིས་ ལམ་བདེན་འདི་ཉིད་ ནད་གཞི་དྲག་ཐབས་ཀྱི་དོན་ལུ་ འཇིག་རྟེན་དང་འགྲོ་བ་ཐམས་ཅད་ཀྱིས་བསྟེན་པའི་སྨན་བཟུམ་ ལམ་བདེན་འདི་ཡང་བསྟེན་དགོ་ནི་འདི་གིས་ ལམ་བདེན་ངོ་མ་འདི་ ཟག་མེད་ལམ་བདེན་ལུ་གོ་དགོཔ་ཨིན། ནང་པ་སངས་རྒྱས་པའི་ལུགས་ལུ་ སངས་རྒྱས་ཀྱི་ས་འཐོབ་ནི་གི་དོན་ལུ་ ལམ་རིམ་གཙོ་བོ་ལྔ་ལུ་བསྟེན་དགོཔ་དང་ དེ་ཡང་ ཚོགས་ལམ། སྦྱོར་ལམ། མཐོང་ལམ། སྒོམ་ལམ། མི་སློབ་པའི་ལམ་ཏེ་ ལམ་ལྔ་ལུ་བསྟེན་དགོ། དེ་ཚུ་གི་ནང་ལས་ ལམ་དང་པོ་ ཚོགས་ལམ་དང་ གཉིས་པ་སྦྱོར་ལམ་གཉིས་འདི་ སོ་སོ་སྐྱེ་བོའི་ས་ནང་སྡོདཔ་ད་བསྟེན་བྱའི་ལམ་དང་ ལམ་གསུམ་པ་མཐོང་ལམ་དང་ བཞི་པ་སྒོམ་ལམ་ དེ་ལས་ལམ་ལྔ་པ་མི་སློབ་པའི་ལམ་གསུམ་འདི་ འཕགས་པའི་ལམ་ཨིནམ་སྦེ་ཆ་བཞགཔ་ཨིན་རུང་ ལམ་མཐའ་མ་མི་སློབ་པའི་ལམ་འདི་ འབྲས་བུ་སངས་རྒྱས་སའམ་ འཕགས་པའི་ས་མཐའ་མ་ས་བཅུ་པ་ཆོས་ཀྱི་སྤྲིན་རྫོགསཔ་ད་གི་ དེ་མ་ཐག་ཏུ་བསྟེན་བྱའི་ལམ་ཨིནམ་ལས་ སངས་རྒྱས་ཀྱི་ལམ་སྦེ་ཡང་ བཞག་དགོཔ་ཨིནམ་སྦེ་བཤད་སྲོལ་འདུག། ལམ་ལྔ་པོ་རྒྱས་པར་བཤད་ན། <br>
 
-'''དང་པ་ ཚོགས་ལམ་ནི།''' ཚོགས་ལམ་ཟེར་མི་འདི་སོ་སོ་སྐྱེ་བོའི་ལམ་ཅིག་ཨིན་ནི་འདི་གིས་ སོ་སོ་སྐྱེ་བོའི་རྒྱུད་ལུ་བྱང་ཆུབ་ཀྱི་སེམས་བསྐྱེད་མི་གི་དུས་ཚོད་ལས་འགོ་བཟུང་ སྦྱོར་ལམ་དྲོད་ལ་སོགས་པ་རང་གི་རྒྱུད་ལུ་མ་བསྐྱེད་བར་དུ་བསྟེན་དགོ་པའི་ ཚོགས་རྒྱ་ཆེན་པོ་བསགས་པའི་ལམ་ཅིག་ལུ་གོཝ་ཨིན། དེའི་སྐབས་ལུ་ དྲན་པ་ཉེར་བཞག་བཞི། ཡང་དག་སྤངས་བ་བཞི། རྫུ་འཕྲུལ་རྐང་པ་བཞི་སོགས་སྒོམས་པ་ལས་ སྤང་བྱ་རགས་པ་ཚུ་ རྣམ་པ་སུན་འབྱིན་གྱི་ཚུལ་གྱིས་སྤང་པ་ལས་ མངོན་ཤེས་དང་ ཆོས་རྒྱུན་གྱི་ཏིང་ངེ་འཛིན་གྱི་ཡོན་ཏན་ཚུ་ ཐོབ་པའི་ལམ་ཅིག་ཨིན། དེ་ཡང་ གྲུབ་མཐའ་མཛོད་ལས་། སངས་རྒྱས་ཐོབ་བྱེད་ཀྱི་དགེ་བ་ལས་དང་པོ་པས་བསྡུས་པ་གང་ཞིག་ཐེག་ཆེན་གྱི་དྲོད་སོགས་ངེས་འབྱེད་ཆ་མཐུན་གྱི་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལ་སྐྱེ་བའི་རྒྱུར་གྱུར་པའོ།། ཞེས་གསུངས་སོ། དེ་ལུ་དབྱེ་ན་ ཚོགས་ལམ་ཆུང་ངུ་། ཚོགས་ལམ་འབྲིང་། ཚོགས་ལམ་ཆེན་པོ་ཟེར་གསུམ་ཡོད། <br>
+'''དང་པ་ ཚོགས་ལམ་ནི།''' ཚོགས་ལམ་ཟེར་མི་འདི་སོ་སོ་སྐྱེ་བོའི་ལམ་ཅིག་ཨིན་ནི་འདི་གིས་ སོ་སོ་སྐྱེ་བོའི་རྒྱུད་ལུ་བྱང་ཆུབ་ཀྱི་སེམས་བསྐྱེད་མི་གི་དུས་ཚོད་ལས་འགོ་བཟུང་ སྦྱོར་ལམ་དྲོད་ལ་སོགས་པ་རང་གི་རྒྱུད་ལུ་མ་བསྐྱེད་བར་དུ་བསྟེན་དགོ་པའི་ ཚོགས་རྒྱ་ཆེན་པོ་བསགས་པའི་ལམ་ཅིག་ལུ་གོཝ་ཨིན། དེའི་སྐབས་ལུ་ དྲན་པ་ཉེར་བཞག་བཞི། ཡང་དག་སྤངས་བ་བཞི། རྫུ་འཕྲུལ་རྐང་པ་བཞི་སོགས་སྒོམས་པ་ལས་ སྤང་བྱ་རགས་པ་ཚུ་ རྣམ་པ་སུན་འབྱིན་གྱི་ཚུལ་གྱིས་སྤང་པ་ལས་ མངོན་ཤེས་དང་ ཆོས་རྒྱུན་གྱི་ཏིང་ངེ་འཛིན་གྱི་ཡོན་ཏན་ཚུ་ ཐོབ་པའི་ལམ་ཅིག་ཨིན། དེ་ཡང་ '''གྲུབ་མཐའ་མཛོད་ལས་།''' སངས་རྒྱས་ཐོབ་བྱེད་ཀྱི་དགེ་བ་ལས་དང་པོ་པས་བསྡུས་པ་གང་ཞིག་ཐེག་ཆེན་གྱི་དྲོད་སོགས་ངེས་འབྱེད་ཆ་མཐུན་གྱི་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལ་སྐྱེ་བའི་རྒྱུར་གྱུར་པའོ།། ཞེས་གསུངས་སོ། དེ་ལུ་དབྱེ་ན་ ཚོགས་ལམ་ཆུང་ངུ་། ཚོགས་ལམ་འབྲིང་། ཚོགས་ལམ་ཆེན་པོ་ཟེར་གསུམ་ཡོད། <br>
 
-གཉིས་པ་སྦྱོར་ལམ། དེ་ཡང་ ཐེག་ཆེན་གྱི་མཐོང་ལམ་གྱི་རྣམ་པ་ལུ་ རྣམ་རྟོག་ག་ནི་ཡང་མེད་པའི་ཐོག་ལས་ ཡིད་ཤེས་ཀྱིས་མཐོང་ནི་གི་དོན་ལུ་ དྲོད་རྩེ་མོ་སོགས་ལུ་ དུས་རྟག་བུ་ སྦྱོར་ནི་འདི་གིས་ སྦྱོར་ལམ་ཟེར་སླབ་ཨིན། གྲུབ་མཐའ་མཛོད་ལས། ཐེག་ཆེན་གྱི་ཚོགས་ལམ་རྫོགས་པའི་རྗེས་ལ་བྱུང་ཞིང་ཐེག་ཆེན་གྱི་རྟོགས་པ་གང་ཞིག་ཐེག་པ་ཆེན་པོའི་མཐོང་ལམ་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལ་སྐྱེ་བའི་རྒྱུར་གྱུར་པའོ།།  ཟེར་གསུངས་ཡོད་དོ་བཟུམ་ སྦྱོར་ལམ་ཟེར་མི་འདི་ ཚོགས་ལམ་གྱི་སྐབས་ལུ་ ཚོགས་རྒྱ་ཆེན་པོ་བསགས་པའི་ཤུལ་ལུ་ སྒོམ་བྱུང་ཤེས་རབ་ཀྱིས་གཟུང་བ་རང་བཞིན་གྱིས་མེད་པར་ བདེན་པའི་དོན་མངོན་པར་རྟོགས་པའི་ལམ་ཨིན་པ་མ་ཚད་ བསྒོམ་ལམ་རང་རྒྱུད་ལ་བསྐྱེད་པའི་རྒྱུར་གྱུར་པའི་ལམ་ལུ་གོཝ་ཨིན། དེའི་སྐབས་ལུ་ དབང་པོ་ལྔ་དང་ སྟོབས་ལྔ་སྒོམ་པ་ལས་ སྤང་བྱ་ཀུན་བཏགས་ཚུ་ གནོན་པའི་ཚུལ་གྱིས་སྤངས་པ་ལས་བརྟེན་ ཏིང་ངེ་འཛིན་དང་ གཟུངས་ མངོན་ཤེས་ལ་སོགས་པའི་ཡོན་ཏན་ཚུ་རང་རྒྱུད་ལུ་ཐོབ་ཨིན། དེ་ལུ་དབྱེ་བ་ སྦྱོར་ལམ་དྲོད། རྩེ་མོ། བཟོད་པ། ཆོས་མཆོག་ཟེར་བཞི་ཡོད།<br>
+'''གཉིས་པ་སྦྱོར་ལམ།''' དེ་ཡང་ ཐེག་ཆེན་གྱི་མཐོང་ལམ་གྱི་རྣམ་པ་ལུ་ རྣམ་རྟོག་ག་ནི་ཡང་མེད་པའི་ཐོག་ལས་ ཡིད་ཤེས་ཀྱིས་མཐོང་ནི་གི་དོན་ལུ་ དྲོད་རྩེ་མོ་སོགས་ལུ་ དུས་རྟག་བུ་ སྦྱོར་ནི་འདི་གིས་ སྦྱོར་ལམ་ཟེར་སླབ་ཨིན། '''གྲུབ་མཐའ་མཛོད་ལས།''' ཐེག་ཆེན་གྱི་ཚོགས་ལམ་རྫོགས་པའི་རྗེས་ལ་བྱུང་ཞིང་ཐེག་ཆེན་གྱི་རྟོགས་པ་གང་ཞིག་ཐེག་པ་ཆེན་པོའི་མཐོང་ལམ་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལ་སྐྱེ་བའི་རྒྱུར་གྱུར་པའོ།།  ཟེར་གསུངས་ཡོད་དོ་བཟུམ་ སྦྱོར་ལམ་ཟེར་མི་འདི་ ཚོགས་ལམ་གྱི་སྐབས་ལུ་ ཚོགས་རྒྱ་ཆེན་པོ་བསགས་པའི་ཤུལ་ལུ་ སྒོམ་བྱུང་ཤེས་རབ་ཀྱིས་གཟུང་བ་རང་བཞིན་གྱིས་མེད་པར་ བདེན་པའི་དོན་མངོན་པར་རྟོགས་པའི་ལམ་ཨིན་པ་མ་ཚད་ བསྒོམ་ལམ་རང་རྒྱུད་ལ་བསྐྱེད་པའི་རྒྱུར་གྱུར་པའི་ལམ་ལུ་གོཝ་ཨིན། དེའི་སྐབས་ལུ་ དབང་པོ་ལྔ་དང་ སྟོབས་ལྔ་སྒོམ་པ་ལས་ སྤང་བྱ་ཀུན་བཏགས་ཚུ་ གནོན་པའི་ཚུལ་གྱིས་སྤངས་པ་ལས་བརྟེན་ ཏིང་ངེ་འཛིན་དང་ གཟུངས་ མངོན་ཤེས་ལ་སོགས་པའི་ཡོན་ཏན་ཚུ་རང་རྒྱུད་ལུ་ཐོབ་ཨིན། དེ་ལུ་དབྱེ་བ་ སྦྱོར་ལམ་དྲོད། རྩེ་མོ། བཟོད་པ། ཆོས་མཆོག་ཟེར་བཞི་ཡོད།<br>
 
-གསུམ་པ་ མཐོང་ལམ། དེ་ཡང་ འཇིག་རྟེན་ལས་འདས་པའི་ཡོན་ཏན་ ཡེ་ཤེས་ཀྱིས་དངོས་སུ་མཐོང་བ་ལས་བརྟེན་ མཐོང་ལམ་ཟེར་གོ་ནི་དང་ ཡང་ གྲུབ་མཐའ་མཛོད་ལས། ཐེག་ཆེན་མཐོང་ལམ་རྫོགས་པའི་རྗེས་ལ་བྱུང་ཞིང་ཐེག་ཆེན་གྱི་རྟོགས་པ་གང་ཞིག་ཐེག་ཆེན་མི་སློབ་ལམ་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལ་སྐྱེ་བའི་རྒྱུར་གྱུར་པའོ།། ཟེར་གསུངས་ཡོད་དོ་བཟུམ་སྦེ་ མཐོང་ལམ་ཟེར་མི་འདི་ སྦྱོར་ལམ་དྲོད་སོགས་རིམ་གྱིས་བསྟེན་པ་ལས་ འཇིག་རྟེན་ལས་འདས་པའི་ཡོན་ཏན་ ཇི་ལྟ་བའི་བདག་མེད་དངོས་སུ་སྦེ་རྟོགས་པ་མ་ཚད་ ཇི་སྙེད་པའི་དོན་ཅི་རིགས་སུ་རྟོགས་ཏེ་ སྒོམ་ལམ་རང་རྒྱུད་ལུ་བསྐྱེད་པའི་རྒྱུར་གྱུར་པའི་ལམ་ཅིག་ལུ་གོ་ནི་ཨིན། མཐོང་ལམ་གྱི་སྐབས་ལུ་ བདག་མེད་ཀྱི་དོན་དངོས་སུ་སྦེ་མཐོངམ་མ་ཚད་ བྱང་ཆུབ་འཕགས་པའི་ཡན་ལག་བདུན་རང་རྒྱུད་ལ་སྒོམས་པ་ལས་བརྟེན་ སྤངས་བྱ་ཉོན་མོངས་པ་ཚུ་རྩ་བ་ལས་སྤངས་ཏེ་ ཡོན་ཏན་བརྒྱ་ཕྲག་བཅུ་གཉིས་ཐོབ་ཨིན། དེ་ལུ་དབྱེ་བ་ མཉམ་བཞག་དང་རྗེས་ཐོབ་ཟེར་གཙོ་བོའི་དབྱེ་བ་གཉིས་ཡོད་རུང་ མཐོང་ལམ་སྐད་ཅིག་བཅུ་དྲུག་ཟེར་ཡང་བཤད་སྲོལ་ཡོདཔ་ཨིན།<br>
+'''གསུམ་པ་ མཐོང་ལམ།''' དེ་ཡང་ འཇིག་རྟེན་ལས་འདས་པའི་ཡོན་ཏན་ ཡེ་ཤེས་ཀྱིས་དངོས་སུ་མཐོང་བ་ལས་བརྟེན་ མཐོང་ལམ་ཟེར་གོ་ནི་དང་ ཡང་ '''གྲུབ་མཐའ་མཛོད་ལས།''' ཐེག་ཆེན་མཐོང་ལམ་རྫོགས་པའི་རྗེས་ལ་བྱུང་ཞིང་ཐེག་ཆེན་གྱི་རྟོགས་པ་གང་ཞིག་ཐེག་ཆེན་མི་སློབ་ལམ་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལ་སྐྱེ་བའི་རྒྱུར་གྱུར་པའོ།། ཟེར་གསུངས་ཡོད་དོ་བཟུམ་སྦེ་ མཐོང་ལམ་ཟེར་མི་འདི་ སྦྱོར་ལམ་དྲོད་སོགས་རིམ་གྱིས་བསྟེན་པ་ལས་ འཇིག་རྟེན་ལས་འདས་པའི་ཡོན་ཏན་ ཇི་ལྟ་བའི་བདག་མེད་དངོས་སུ་སྦེ་རྟོགས་པ་མ་ཚད་ ཇི་སྙེད་པའི་དོན་ཅི་རིགས་སུ་རྟོགས་ཏེ་ སྒོམ་ལམ་རང་རྒྱུད་ལུ་བསྐྱེད་པའི་རྒྱུར་གྱུར་པའི་ལམ་ཅིག་ལུ་གོ་ནི་ཨིན། མཐོང་ལམ་གྱི་སྐབས་ལུ་ བདག་མེད་ཀྱི་དོན་དངོས་སུ་སྦེ་མཐོངམ་མ་ཚད་ བྱང་ཆུབ་འཕགས་པའི་ཡན་ལག་བདུན་རང་རྒྱུད་ལ་སྒོམས་པ་ལས་བརྟེན་ སྤངས་བྱ་ཉོན་མོངས་པ་ཚུ་རྩ་བ་ལས་སྤངས་ཏེ་ ཡོན་ཏན་བརྒྱ་ཕྲག་བཅུ་གཉིས་ཐོབ་ཨིན། དེ་ལུ་དབྱེ་བ་ མཉམ་བཞག་དང་རྗེས་ཐོབ་ཟེར་གཙོ་བོའི་དབྱེ་བ་གཉིས་ཡོད་རུང་ མཐོང་ལམ་སྐད་ཅིག་བཅུ་དྲུག་ཟེར་ཡང་བཤད་སྲོལ་ཡོདཔ་ཨིན།<br>
 
-བཞི་པ་སྒོམ་ལམ་ནི། 	སྔར་མཐོང་ལམ་གྱི་སྐབས་ལུ་ མཐོང་ཡོད་པའི་བདག་མེད་ཀྱི་དོན་འདི་དང་ དོན་གཞན་ཚུ་རང་རྒྱུད་ལུ་གོམས་པར་བྱེད་པའི་ལམ་ཨིན་ནི་འདི་གིས་ སྒོམ་ལམ་ཟེར་སླབ་ཨིན། ཡང་ བདག་མེད་རྟོགས་པའི་ཤེས་རབ་འདི་ རྒྱུན་མ་ཆད་པར་ཟག་མེད་ཀྱི་ཡོན་ཏན་ཁྱད་པར་ཅན་ཚུ་ བརྗེད་མ་བཅུག་པར་སྒོམ་པའི་དགེ་བ་ ཐེག་ཆེན་གྱི་མི་སློབ་ལམ་གྱི་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལུ་བསྐྱེད་པར་བྱེད་པའི་རྒྱུར་གྱུར་པའི་ལམ་ལུ་གོཝ་ཨིན། འདི་ལུ་དབྱེ་བ་མཐོང་ལམ་བཟུམ་སྦེ་ར་ མཉམ་བཞག་དང་རྗེས་ཐོབ་ཟེར་གཉིས་ཡོདཔ་ཨིན་རུང་ བཤད་སྲོལ་ཅིག་ལས་ སྒོམ་ལམ་སྐོར་དགུ་ཟེར་ཡང་བརྩི་སྲོལ་ཡོདཔ་ཨིན། སྒོམ་ལམ་འདི་ ས་གཉིས་པ་ལས་ ས་བཅུ་པའི་བར་གྱི་བྱང་སེམས་འཕགས་པ་ཚུ་གིས་བསྟེན་ནི་མ་གཏོགས་ ས་དང་པོ་མན་ཆད་ནང་བསྟེན་རུང་བའི་ལམ་མེན། ལམ་འདིའི་སྐབས་ལུ་ ཉོན་མོངས་པའི་སྒྲིབ་པ་དང་ ཤེས་སྒྲིབ་ལྷན་སྐྱེས་ཚུ་སྤངམ་ཨིན།<br>
+'''བཞི་པ་སྒོམ་ལམ་ནི།''' 	སྔར་མཐོང་ལམ་གྱི་སྐབས་ལུ་ མཐོང་ཡོད་པའི་བདག་མེད་ཀྱི་དོན་འདི་དང་ དོན་གཞན་ཚུ་རང་རྒྱུད་ལུ་གོམས་པར་བྱེད་པའི་ལམ་ཨིན་ནི་འདི་གིས་ སྒོམ་ལམ་ཟེར་སླབ་ཨིན། ཡང་ བདག་མེད་རྟོགས་པའི་ཤེས་རབ་འདི་ རྒྱུན་མ་ཆད་པར་ཟག་མེད་ཀྱི་ཡོན་ཏན་ཁྱད་པར་ཅན་ཚུ་ བརྗེད་མ་བཅུག་པར་སྒོམ་པའི་དགེ་བ་ ཐེག་ཆེན་གྱི་མི་སློབ་ལམ་གྱི་སྐད་ཅིག་དང་པོ་ཤེས་རྒྱུད་ལུ་བསྐྱེད་པར་བྱེད་པའི་རྒྱུར་གྱུར་པའི་ལམ་ལུ་གོཝ་ཨིན། འདི་ལུ་དབྱེ་བ་མཐོང་ལམ་བཟུམ་སྦེ་ར་ མཉམ་བཞག་དང་རྗེས་ཐོབ་ཟེར་གཉིས་ཡོདཔ་ཨིན་རུང་ བཤད་སྲོལ་ཅིག་ལས་ སྒོམ་ལམ་སྐོར་དགུ་ཟེར་ཡང་བརྩི་སྲོལ་ཡོདཔ་ཨིན། སྒོམ་ལམ་འདི་ ས་གཉིས་པ་ལས་ ས་བཅུ་པའི་བར་གྱི་བྱང་སེམས་འཕགས་པ་ཚུ་གིས་བསྟེན་ནི་མ་གཏོགས་ ས་དང་པོ་མན་ཆད་ནང་བསྟེན་རུང་བའི་ལམ་མེན། ལམ་འདིའི་སྐབས་ལུ་ ཉོན་མོངས་པའི་སྒྲིབ་པ་དང་ ཤེས་སྒྲིབ་ལྷན་སྐྱེས་ཚུ་སྤངམ་ཨིན།<br>
 
-ལྔ་པ་ མི་སློབ་པའི་ལམ་ནི། 	མི་སློབ་པའི་ལམ་ཟེར་མི་འདི་ ཐེག་ཆེན་གྱི་ལམ་མཐར་ཕྱིན་པའི་དགེ་བ་ལུ་གོ་ནི་དང་ འདི་ལུ་མཐར་ཕྱིན་པའི་ལམ་ཟེར་ཡང་སླབ་སྲོལ་ཡོད། ཡང་ གྲུབ་མཐའ་མཛོད་ལས།  ཐེག་ཆེན་གྱི་སྤངས་རྟོགས་མཐར་ཕྱིན་པའི་དགེ་བའོ།། ཟེར་གསུངས་ཡོད་དོ་བཟུམ་ཨིན། དེའི་སྐབས་རང་གི་གནས་འགྱུར་འགྱོཝ་མ་ཚད་ དེའི་ཚེ་ངོ་བོ་ཉིད་སྐུ་དང་ ཡེ་ཤེས་ཆོས་སྐུ་གཉིས་རང་བཞིན་གྱི་རང་རྒྱུད་ལུ་སྐྱེ་འགྱོཝ་ཨིན། དེ་ལུ་དབྱེ་བ་ ཟག་མེད་ཀྱི་ཆོས་ཉེར་གཅིག་ཡོད།</big>
+'''ལྔ་པ་ མི་སློབ་པའི་ལམ་ནི།''' 	མི་སློབ་པའི་ལམ་ཟེར་མི་འདི་ ཐེག་ཆེན་གྱི་ལམ་མཐར་ཕྱིན་པའི་དགེ་བ་ལུ་གོ་ནི་དང་ འདི་ལུ་མཐར་ཕྱིན་པའི་ལམ་ཟེར་ཡང་སླབ་སྲོལ་ཡོད། ཡང་ '''གྲུབ་མཐའ་མཛོད་ལས།'''  ཐེག་ཆེན་གྱི་སྤངས་རྟོགས་མཐར་ཕྱིན་པའི་དགེ་བའོ།། ཟེར་གསུངས་ཡོད་དོ་བཟུམ་ཨིན། དེའི་སྐབས་རང་གི་གནས་འགྱུར་འགྱོཝ་མ་ཚད་ དེའི་ཚེ་ངོ་བོ་ཉིད་སྐུ་དང་ ཡེ་ཤེས་ཆོས་སྐུ་གཉིས་རང་བཞིན་གྱི་རང་རྒྱུད་ལུ་སྐྱེ་འགྱོཝ་ཨིན། དེ་ལུ་དབྱེ་བ་ ཟག་མེད་ཀྱི་ཆོས་ཉེར་གཅིག་ཡོད།</big>
 
+=== བདག་ཅག་གི་སྟོན་པ་སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་གི་མཛད་པ་དང་པོ་ དགའ་ལྡན་གནས་ལས་འཕོ་བའི་མཛད་པའི་སྐོར། ===
+<big>བདག་ཅག་གི་སྟོན་པ་སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་མཆོག་ བསྐལ་པ་གྲངས་མེད་གསུམ་གྱི་རིང་ལུ་ དཀའ་སྤྱོད་ཆེན་པོ་དང་དུ་ལེན་ཏེ་ དག་པ་ས་གསུམ་དང་མ་དག་ས་བདུན་ དེ་ལས་ འཛམ་གླིང་ས་སྟེང་བཅས་ ཡུལ་བ་འདྲཝ་གསུམ་ནང་ སངས་རྒྱས་ཚུལ་སྟོན་ཏེ་ མཐའ་མ་འཛམ་གླིང་ནང་ལུ་ སངས་རྒྱས་ཚུལ་སྟོན་པར་འབྱོན་པའི་སྐབས་ལུ་ མཛད་པ་བཅུ་གཉིས་ཀྱི་ཐོག་ལས་སྟོན་གནང་སྟེ་ཡོདཔ་ཨིན། དེའི་ནང་ལས་ '''དགའ་ལྡན་གནས་ལས་འཕོ་བའི་མཛད་པ།''' <br>
 
-                         
+ཧེ་མ་ སངས་རྒྱས་མར་མེ་མཛད་ཀྱིས་ལུང་བསྟན་མི་ལྟར་དུ་ བདག་ཅག་གི་སྟོན་པ་མཆོག་ བྱང་ཆུབ་སེམས་དཔའ་ དམ་པ་ཏོག་དཀར་གྱི་ལུས་ལུ་སྐྱེ་བ་བཞེས་ཏེ་ སངས་རྒྱས་འོད་སྲུང་གི་རྒྱལ་ཚབ་སྦེ་བཞུགས་ས་ལས་ ལུང་བསྟན་དུས་ལུ་བབས་ཏེ་ མིའི་ལུས་ལུ་ སངས་རྒྱས་ཚུལ་སྟོན་པར་ མི་ཡུལ་འཛམ་བུ་གླིང་ལུ་བྱོན་ནུག། རྒྱལ་ཚབ་མཆོག་གིས་ ངོ་མཚར་བའི་གླིང་སེར་སྐྱའི་གྲོང་ཁྱེར་དང་ ངོ་མཚར་བའི་རིགས་ཐམས་ཅད་ལས་མཆོག་ཏུ་གྱུར་པ་ཤཱཀྱའི་རིགས་ལུ་གཟིགས་ཡོདཔ་དང་།  རིགས་འདི་ ཧེ་མ་བོད་ཡུལ་ལུ་ རྒྱལཔོ་གཉའ་ཁྲི་བཙན་པོའི་གདུང་རབས་ལས་ རྒྱལཔོ་འཕགས་སྐྱེས་བུ་ཟེར་མི་ཅིག་བྱོན་མི་འདི་ལུ་ སྲས་སྲསམོ་ལེ་ཤ་ཡོདཔ་ཨིན་རུང་ རྒྱལཔོ་འདི་གིས་ བཙུནམོ་གསརཔ་ཅིག་བཞེས་ཏེ་ སྲས་དང་སྲསམོ་ལེ་ཤ་ར་བྱུང་ནུག། <br>
+
+སྲས་དང་སྲསམོ་ཚུ་གི་ནང་ལས་ སྦོམ་ཤོས་ར་ རྐང་གདུབ་ཅན་ཟེར་མི་འདི་ཨིན་རུང་ རྒྱལ་སྲིད་འདི་ བཙུནམོ་གསརཔ་གི་སྲས་ དགའ་བའི་རྩིབས་ཟེར་མི་འདི་ལུ་སྤྲོད་ནི་འདི་གིས་ སྲས་རྐང་གདུབ་ཅན་འདི་ རང་གི་ཡབ་ལུ་ཐུགས་ཕམ་སྟེ་ རང་གི་མ་གཅིག་གི་སྤུན་ཆ་ཚུ་ཁྱིད་དེ་ རྒྱལ་སྲིད་སྤངས་ཏེ་ ལྷོ་ཕྱོགས་ཁ་ཐུག་ལུ་བྱོན་སོ་ནུག། <br>
+
+ལྷོ་ཕྱོགས་ལུ་ཕེབས་ད་ སྤུན་ཆ་ནང་རྡོག་ཕན་ཚུན་བཟའ་ཚང་སྐྱོང་ཚུགསཔ་སྦེ་འབད་ནི་འདི་གིས་ རིགས་ཀྱི་མིང་ལུ་ཡང་ ཤཱཀྱའི་རིགས་ཟེར་དར་ཁྱབ་ཡར་སོ་ནུག། དེ་ལུ་ སངས་རྒྱས་ཀྱིས་ རིགས་མཆོག་ཏུ་གྱུར་པ་ཅིག་སྦེ་གཟིགས་ཏེ་ རིགས་རྒྱལ་རིགས། ཡུལ་རྒྱ་གར་སེར་སྐྱའི་གྲོངས། རུས་བུ་རམ་ཤིང་པ་ཤཱཀྱའི་རྒྱུད། ཡུམ་སྒྱུ་མ་ལྷ་མཛེས་དང། དུས་སྙིགས་མའི་ལྔ་བདོའི་དུས་བཅས་ ངོ་མཚར་བའི་གཟིགས་པ་རྣམ་པ་ལྔ་ལུ་གཟིགས་ཏེ་ འགྲོ་བའི་དོན་མཛད་པར་ འཛམ་བུ་གླིང་ནང་བྱོན་གནང་ནུག་གོ། 
+</big>
+
+=== ཡུམ་གྱི་ལྷུམ་སུ་བཞུགས་པའི་མཛད་པ། ===
+<big>དེ་ཡང་ གཟིགས་ཚུལ་རྣམ་པ་ལྔའི་ཐོག་ལས་གཟིགས་ཡོད་མི་ཚུ་ལས་ དང་པ་དུས་ལུ་གཟིགས་ཚུལ་འདི་ཡང་ རྒྱལ་བ་རིན་ཆེན་སྙིང་པོའི་འདུན་དུ་ བྲམ་ཟེ་རྒྱ་མཚོའི་རྡུལ་གྱིས་ ཚེ་ལོ་བརྒྱ་པའི་དུས་ལུ་རྒྱལ་བའི་མཛད་པ་སྟོན་ནིའི་དམ་བཅའ་ཞུ་སྟེ་ སངས་རྒྱས་མར་མེ་མཛད་ལས་འོད་སྲུང་ཚུན་ཚོད་ཀྱི་བར་ན་ རྒྱལ་བ་རྣམས་ཀྱིས་ ལུང་བསྟན་ཡོད་དོ་བཟུམ་སྦེ་ སྐྱེས་བུ་དམ་པ་ཏོག་དཀར་པོ་གིས་ དགོས་དོན་འདི་ཐུགས་ཁར་དྲན་ཏེ་ ཕྱོགས་བཅུ་ནང་བཞུགས་པའི་རྒྱལ་བ་རྣམས་ཀྱིས་ཡང་ ལོག་ཅི་ལོག་ཅི་ར་བརྒྱུད་སྐུལ་མཛད་ཡོདཔ་ལས་ འཛམ་བུ་གླིང་འདི་ནང་བྱོན་པའི་དུས་ཡང་ སྙིགས་མ་ལྔ་བདོའི་དུས་ལུ་བབས་ཡོདཔ་སྦེ་གཟིགས་ནུག། གཉིས་པ་ ཡུལ་ལུ་གཟིགས་ཚུལ་འདི་ཡང་་ སངས་རྒྱས་འཇིག་རྟེན་ལུ་བྱོན་མི་འདི་ འགྲོ་བ་སེམས་ཅན་ཐམས་ཅད་ཀྱི་དོན་ལུ་རྐྱངམ་གཅིག་ཨིན་མས། གདུལ་བྱ་ཚུ་ནང་ལས་ གཙོ་བོ་ལྷ་དང་མི་གཉིས་ཨིནམ་ལས་ ལྷའི་ཡུལ་དང་མིའི་ཡུལ་གཉིས་ནང་ལས་ཡང་མིའི་ཡུལ། གླིང་བཞི་ཡོད་པའི་ནང་ལས་ འཛམ་བུ་གླིང་ནང་ཨིནམ་དང་། འཛམ་བུ་གླིང་འདི་ནང་ལས་ཡང་ ཤར་ཕྱོགས་རྒྱ་གར་འཕགས་པའི་ཡུལ་ལུ་ སངས་རྒྱས་ནི་ལུ་གཟིགས་ཏེ་བྱོན་གནང་ནུག།<br>
+
+གསུམ་པ་ རིགས་ལུ་གཟིགས་ཚུལ་ནི། འཛམ་གླིང་འདི་ནང་ སངས་རྒྱས་དང་བྱང་ཆུབ་སེམས་དཔའ་ བླམ་མཁས་པ་དང་ སྤྲུལ་སྐུ་བྱོན་རེ་བྱོན་ཚེ་གཅིགཔོ་ རྒྱལ་པོའི་རིགས་དང་བྲམ་ཟེ་གི་རིགས་ལས་ འཁྲུངས་འཁྲུངསམ་མ་གཏོགས་རིགས་སོ་སོ་ལས་འཁྲུངས་ཡོདཔ་སྦེ་འཐོན་ནི་མེདཔ་ཨིན། འདི་ཡང་ མིའི་རིགས་ལུ་མ་འདྲཝ་མང་རབས་ཅིག་ཡོད་རུང་ དྲི་མ་གི་མི་གཙང་བ་མེདཔ་ རིགས་ག་བ་ཡང་གཙང་ཤོས་འདི་ རྒྱལ་རིགས་དང་བྲམ་ཟེ་གི་རིགས་གཉིས་ལས་བརྒལ་མེད་ནི་འདི་གིས་ཨིན་མས། བདག་ཅག་གི་སྟོན་པ་སངས་རྒྱས་ཤཱཀྱ་ཐུབ་པ་ཡང་ རྒྱལ་པོའི་རིགས་ལས་འཁྲུངས་ཡོདཔ་དང་། འདིའི་ནང་ལས་ཡང་ རྒྱལ་རིགས་ལས་ག་བ་ཡང་གཙང་ཤོས་ རྒྱལ་པོ་ཟས་གཙང་གི་རིགས་ལུ་བྱོན་ནུག། དེ་སྦེ་ དྲིན་ཅན་གོང་མ་ སངས་རྒྱས་དང་སྤྲུལ་སྐུ་ཚུ་གིས་ རིགས་གཙང་མ་ལུ་གཟིགས་དགོ་མི་འདི་ སངས་རྒྱས་དང་སྤྲུལ་སྐུ་ཚུ་ འཛམ་གླིང་ནང་འབྱོན་དགོ་མི་འདི་གཙོ་བོ་ གདུལ་བྱ་སེམས་ཅན་ཚུ་གི་དོན་ལུ་འབྱོན་དོ་ཡོདཔ་ལས་ གལ་སྲིད་ སངས་རྒྱས་དང་སྤྲུལ་སྐུ་ཚུ་ རིགས་ཐ་མལ་པ་ལས་འབྱོན་མི་ཅིག་ཨིན་པ་ཅིན་ གདུལ་བྱ་སེམས་ཅན་ཚུ་གིས་ཞན་པ་ལོག་སྟེ་ གདུལ་བྱ་བཏུལ་མི་ཚུགས་ནི་ཨིནམ་ལས་བརྟེན་ཏེ་ཨིན་མས།<br>
+
+བཞི་པ་ རུས་ལུ་གཟིགས་ཚུལ་འདི་ཡང་	བཤད་ཟིན་གདུང་བརྒྱུད་ལས་ཨིན་མི་ཡབ་རྒྱལ་པོ་ཟས་གཙང་དང་ ལྷའི་རིགས་ལས་ཨིན་མིཡུམ་སྒྱུ་མ་ལྷ་མཛེས་གཉིས་ཀྱི་རུས་རྒྱུན་ལུ་གཟིགས་ཏེ་ བྱོན་ཡོདཔ་ཨིན་མས།<br>
+
+ལྔ་པ་ ཡུམ་ལུ་གཟིགས་པ་འདི་ཡང་  ཡར་ལྟག་ལུ་བཤད་ཡོད་དོ་བཟུམ་སྦེ་ར་ ལྷའི་རིགས་ཀྱི་ནང་ལས་ རིགས་གཙང་ཞིང་དྲི་མ་མེད་པ་ ལྷའི་རིགས་ཅིག་ལས་འཁྲུངས་མི་ཡུམ་སྒྱུ་མ་ལྷ་མཛེས་ཀྱི་སྲས་ལུ་སྐུ་འཁྲུངས་ནུག།
+</big>
+
+=== སྐུ་བལྟམས་པའི་མཛད་པ། ===
+<big>སྟོན་པ་ཤཱཀྱ་ཐུབ་མཆོག་ དགའ་ལྡན་གྱི་གནས་ལས་ ལྷའི་བུ་དམ་པ་ཏོག་དཀར་པོ་ཟེར་ཞུ་མི་འདི་གི་སྐྱེ་བ་བཞེས་ཏེ་ ལྷ་ཚུ་ལུ་ ཆོས་སྟོན་ཏེ་བཞུགས་པའི་བར་ན་  མི་མཇེད་འཇིག་རྟེན་གྱི་ཁམས་ཀྱི་འཛམ་བུ་གླིང་ནང་འབྱོན་ནི་གི་དུས་ལུ་འབབ་ཨིནམ་མཁྱེན་ཏེ་ སྐུ་ཚབ་རྗེ་བཙུན་བྱམས་པ་མགོན་པོ་བཀལ་ཞིནམ་ལས་ དགའ་ལྡན་གྱི་གནས་ལས་བྱོན་ནུག།   <br>
+
+དེ་བསྒང་ འཛམ་བུ་གླིང་གི་གྲོང་ཁྱེར་ སེར་སྐྱའི་རྒྱལ་པོ་ཟས་གཙང་གྱི་བཙུནམོ་ སྒྱུ་འཕྲུལ་ལྷ་མོ་མཆོག་གསོ་སྦྱོང་ལུ་བཞུགས་པའི་ཕྱི་རུ་གཉིད་ལམ་ནང་ མཆོད་པའི་སྒྲ་དང་གཅིག་ཁར་ གླངམོ་ཆེ་ཐལ་ཁ་ མཆེཝ་དྲུག་འབད་མི་གཅིག་ མོ་གི་མཆན་ལོགས་གཡས་པ་ལས་སྦེ་ ཕོཝ་ནང་འཛུལ་བའི་གཉིད་ལམ་མཐོངམ་དང་གཅིག་ཁར་ སྟོན་པ་ཤཱཀྱ་ཐུབ་པ་འདི་ ཡུམ་གྱི་མངལ་ལུ་ཞུགས་ནུག། ངོ་མཚར་མཚན་མ་བྱེ་བ་སྙེད་དང་བཅས། །ལུམྦི་ནཱི་ཡི་ཚལ་དུ་དོན་གྲུབ་བལྟམས།། ཟེར་གསུངས་མི་དང་བསྟུན་  ས་ག་ཟླ་བའི་ཚེས་ ༡༥ གི་ཉིནམ་ལུ་ ལུམྦི་ཚལ་ཟེར་བའི་ལྡུམ་ར་ནང་སྐུ་འཁྲུངས་ནུག།  དེ་ལས་ སྲས་འདི་འཁྲུངསམ་ཅིག་ ཡ་མཚན་ཆེ་ཏོག་ཏོ་སྦེ་ ཕྱོགས་བཞི་ལུ་གོམ་ཐེངས་བདུན་རེ་སྤོ་སྟེ་འབྱོནམ་ད་ གོམ་ག་ཏེ་སྤོ་སར་ མེ་ཏོག་པདྨ་ཚུ་ཤར་ཏེ་ གཞན་དང་མ་འདྲ་བའི་རྟགས་དང་མཚན་མ་བཟང་པོ་བྱུང་ནུག། <br>
+  
+དེ་ལས་ ཡུམ་སྲས་འཁོར་དང་བཅསཔ་ གྲོང་ཁྱེར་སེར་སྐྱ་ལུ་ལོག་ཏེ་འབྱོནམ་ད་ ཡབ་ཁོ་ར་གིས་སྲས་ཀྱི་མཚན་ཡང་ དོན་ཀུན་གྲུབ་པ་ཟེར་གསོལ་ནུག།   མཚན་དེ་སྦེ་གསོལ་དགོ་མི་འདི་ཡང་ ཡབ་ཟས་གཙང་ལུ་སྲས་མེད་པར་ ཐུགས་བརྡུངས་ཏེ་བཞུགས་པའི་སྐབས་ལུ་ སྲས་གཅིག་འཁྲུངསམ་ལས་ ཁོ་གི་བསམ་པའི་དོན་ག་ར་འགྲུབ་ནི་འདི་གིས་ཨིན་མས། དེ་ལས་ ཞག་བདུན་ལངམ་ད་ ཡུམ་གཤགས་སོ་ནུག།  ཨིན་རུང་ ཡུམ་གྱི་ནུམོ་སྐྱེ་རྒུའི་བདག་མོ་ཟེར་མི་འདི་གིས་ ཡུམ་གྱི་སྐུ་ཚབ་མཛད་ཞིནམ་ལས་ རྒྱལ་སྲས་མཆོག་བདག་འཛིན་མཛད་གནང་ནུག།
+</big>
+                      
 === ཁུངས་གཏུག། ===
 # དྭགས་གས་པོ་ལྷ་རྗེ་བསོད་ནམས་རིན་ཆེན། དེབ་གཟུགས་པར་ཐེངས་དང་པ། སྤྱི་ལོ་ ༢༠༠༥ ལུ། 
 # དཔེ་དེབ་ཀྱི་མིང་། དམ་ཆོས་ཡིད་བཞིན་ནོར་བུ་ཐར་པ་རིན་པོ་ཆེའི་རྒྱན།
@@ -198,3 +224,9 @@
 # ཀུན་བཟང་བླ་མའི་ཞལ་ལུང་། 	
 # དམ་ཆོས་ཡིད་བཞིན་ནོར་བུ་ཐར་པ་རིན་པོ་ཆེའི་རྒྱན་ ༢༠༠༥ ། (མཛད་པ་པོ་ སྐྱབས་རྗེ་བསྟན་འཛིན་དོན་གྲུབ།)                    
 # སྐལ་བཟང་ཡིད་ཀྱི་དགའ་སྟོན།
+# ཞི་གཡོག་ཆོས་རྒྱུགས་ཀྱི་དོན་ལུ་ བྲིས་ཡོད་པའི་ཟིན་བྲིས།
+# ཨཱཙཱརྱ་གྲགས་པ་རྒྱལ་མཚན། (༢༠༠༧) ༧ གོང་ས་མཆོག་ནས་བདེན་པ་བཞིའི་སྐོར།
+# ཨ་མཁར་བློ་བཟང་རྒྱ་མཚོའམ་མཚོ་ལྡན་དགྱེས་པའི་ལང་ཚོ། (༢༠༠༢) ཆོས་འབྱུང་ཀུན་བཏུས་པདྨ་དཀར་པོའི་ཆུན་པོ་བློ་གསལ་འདྲེན་བྱེད་བདུད་རྩིའི་དཔལ་ཡོན་ཞེས་བྱ་བ་བཞུགས་སོ།།
+# དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།།
+# ཨ་མཁར་བློ་བཟང་རྒྱ་མཚོའམ་མཚོ་ལྡན་དགྱེས་པའི་ལང་ཚོ། (༢༠༠༢) ཆོས་འབྱུང་ཀུན་བཏུས་པདྨ་དཀར་པོའི་ཆུན་པོ་བློ་གསལ་འདྲེན་བྱེད་བདུད་རྩིའི་དཔལ་ཡོན་ཞེས་བྱ་བ་བཞུགས་སོ།།
+# དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།།
