*Empty MediaWiki Message*

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -60,8 +60,49 @@
 སྡེ་སྲིད་ཁྲི་རབས་བདུན་པ་བསམ་གཏན་བསྟན་འཛིན་མཆོག་ ཁྲི་ཐོག་ལུ་བྱོན་པའི་ཤུལ་ལུ་ བྱམས་མགོན་གྱི་ཡུམ་དང་སྐུ་མཆེད་ཚུ་ ཨུ་ལ་ལས་ལོག་རང་གནས་ལུ་འོང་ཆོག་པའི་བཀའ་རྒྱ་གནངམ་ལས་ ལོག་སྟེ་རང་ཡུལ་ལུ་འབྱོར་ཚུགསཔ་མཛད་གནང་ནུག། སྤྱི་ལོ་ ༡༧༠༦ ལུ་ ལ་དྭགས་དང་འབྲུག་རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ན་མཐུན་ལམ་ཡང་ཡར་དྲག་སོང་ཡོདཔ་ཨིན་མས།</big> 
 ==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ==== 
 <big>ས་སྐྱོང་མི་དབང་དབུ་མཛད་བསམ་གཏན་བསྟན་འཛིན་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་བཞུགས་པའི་སྐབས་ ཐིམ་རྫོང་པ་འབྲུག་རབ་རྒྱས་དང་ སྤུངས་རྫོང་པ་བསྟན་པ་དབང་ཕྱུག་གཉིས་ཀྱི་བར་ མ་འགྲིགས་པར་ སྤྱི་ལོ་ ༡༧༠༦ ལུ་ ནང་འཁྲུག་འབྱུང་ནི་འབདཝ་ལས་ སྡེ་སྲིད་ཀྱི་ཕྱག་ལཱ་མཛད་ནི་འདི་འཇམ་ཏོག་ཏོ་ཅིག་མེདཔ་གཟིགས་ཏེ་ སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་གནང་ནུག། <br>
-
 དབུ་མཛད་བསམ་གཏན་བསྟན་འཛིན་མཆོག་ གདན་ས་ལྕགས་རི་ལུ་ ཟུར་བཞུགས་མཛད་དེ་ ལོ་ངོ་གཅིག་མ་ལངམ་ཅིག་ཐུགས་དམ་གནང་བཞུགས་ཏེ་ སྤྱི་ལོ་ ༡༧༠༧ ལུ་དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག་གོ།</big> 
+
+=== ༼སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་ས་སྐྱོང་མི་དབང་ འབྲུག་རབ་རྒྱས་ཀྱི་མཛད་རྣམ།༽ ===
+<big>འཁྲུངས་ཡུལ་ཝང་སྲིན་མོ་ལས་ཨིནམ་ད་ མཚན་ཡང་འབྲུག་རབ་རྒྱས་ཟེར་བཏགས་ཡོདཔ་མས། གཞོན་ནུ་ལས་ཆོས་རྗེ་འབྲུག་པའི་སྒར་ལྟོའི་གྲལ་དུ་ཞུགས་ཏེ་ དཀའ་ངལ་ག་ཅི་བཟུམ་ལུ་ཡང་གདོང་ལེན་འབད་དེ་ཕྱག་ཞུ་མི་ཅིག་ཨིན་མས། ཁོ་གིས་རྩིས་མཁྱེན་ནི་འདི་གིས་ མི་ཚུ་གིས་ཝང་ཕ་ཇོ་ཟེར་ཞུ་དོ་ཡོདཔ་མས། དེ་ལས་ཤུལ་མ་སྡེ་སྲིད་མཛདཔ་ད་ མཚན་ལུ་སྡེ་པ་རྒྱ་བོ་ཟེར་ཡང་ཞུཝ་ཨིན་མས། འབྲུག་རབ་རྒྱས་ཀྱིས་གོ་གནས་དང་པ་ མགར་ས་རྫོང་གི་ཤ་གཉེར་འབད་ནུག། ཁོ་གིས་སྡེ་སྲིད་གོང་མ་ཚུ་གི་སྐབས་ བོད་དང་འབྲས་ལྗོངས་དང་གཅིག་ཁར་དམག་འཁྲུགས་དང་ དེ་ལས་རྒྱལ་ཁབ་ནང་འཁྲུགས་ཀྱི་སྐབས་ལུ་ ལྷག་བསམ་རྣམ་དག་གི་ཕྱག་ཞུཝ་ལས་ གཞུང་མགྲོན་གཉེར་གྱི་གོ་གནས་ལུ་ཕྱག་ཞུ་བའི་བར་ན་ སྡེ་སྲིད་ཁྲི་རབས་ལྔ་པ་དགེ་འདུན་ཆོས་འཕེལ་གྱིས་ མགྲོན་གཉེར་ལས་ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ལུ་བསྐོ་བཞག་གནང་ནུག།<br>
+
+སྡེ་སྲིད་ཁྲི་རབས་བདུན་པ་ དབུ་མཛད་བསམ་གཏན་བསྟན་འཛིན་གྱི་སྐབས་ལུ་ སྤུངས་རྫོང་པ་བསྟན་པ་དབང་ཕྱུག་དང་ ཐིམ་རྫོང་པ་འབྲུག་རབ་རྒྱས་གཉིས་ སྡེ་སྲིད་གོ་གནས་ཀྱི་མི་ངོ་ལུ་ དོ་འགྲན་འབད་དེ་མ་འགྲིགསཔ་ལས་ ནང་འཁྲུགས་ལོང་ནི་གུར་ཐུགཔ་ད་ སྡེ་སྲིད་དབུ་མཛད་བསམ་གཏན་བསྟན་འཛིན་གྱིས་གདོང་ལེན་འབད་མ་ཚུགས་པར་ ཁོ་ར་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངསམ་ཞུ་ནུག། དེ་ལས་འབྲུག་རབ་རྒྱས་ སེམས་རྟོགས་ཁ་རྫོང་ལུ་སོང་སྟེ་ རྒྱལ་སྲས་སྤྲུལ་སྐུའི་ཡུམ་ཀརྨ་ལྷ་མོ་འབད་སར་བཅར་ཏེ་ ཡུམ་ཐུགས་མཉེས་ནིའི་བསྙེན་བཀུར་ཞབས་ཏོག་ག་དེ་དྲག་དྲག་ཞུ་སྡོད་ནུག། '''སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ།''' ཞབས་དྲུང་རྒྱལ་ཚབ་ཀྱི་ཁྲི་ཁར་ བཞུགས་ཡོད་མི་རྒྱལ་སྲས་སྤྲུལ་སྐུ་ཀུན་དགའ་རྒྱལ་མཚན་མཆོག་ སྡེ་སྲིད་དབུ་མཛད་བསམ་གཏན་བསྟན་འཛིན་དགོངསམ་ཞུ་ཞིནམ་ལས་ རྒྱལ་ཚབ་དང་སྡེ་སྲིད་གཉིས་ཆ་རའི་ཐུགས་འགན་བཞེས་དགོཔ་བྱུང་ནུག། ཟླཝ་དག་པ་ཅིག་གི་ཤུལ་ལས་ རྒྱལ་སྲས་སྒྲུབ་པ་ལུ་ཞུགས་ནིའི་ཐུགས་ཐག་བཅད་དེ་ འབྲུག་རབ་རྒྱས་སེམས་རྟོགས་ཁ་ལས་འབོ་སྟེ་ རྒྱལ་ས་ཐིམ་ཕུག་ལུ་སྦེ་ སྡེ་སྲིད་བརྒྱད་པའི་ཁྲི་ལུ་མངའ་གསོལ་མཛད་ནུག། <br>
+
+'''སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་ཤུལ།''' སྤྱི་ལོ་ ༡༧༠༧ ལུ་རྗེ་མཁན་ཁྲི་རབས་བཞི་པ་དམ་ཆོས་པད་དཀར་མཆོག་ ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡོངས་འཛིན་མཛད་མི་ བཟོད་པ་ཕྲིན་ལས་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་ལྔ་པར་མངའ་གསོལ་ཞུ་ནུག། སྤྱི་ལོ་ ༡༧༡༢ ལུ་འབྲུག་རབ་རྒྱས་མཆོག་གིས་ཆིངས་འགྲིགས་ཏེ་ བོད་འབྲུག་ས་མཚམས་ཡར་མར་འགྲོ་འགྲུལ་འབད་ཆོགཔ་སྦེ་བཟོ་གནང་ནུག། '''རྒྱལ་སྲས་སྤྲུལ་སྐུའི་སྐུ་སྲོག་འཕྲོག་པ།''' སྤྱི་ལོ་ ༡༧༡༡ ལུ་རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་མཆོག་ ཐུགས་དམ་ལོ་ ༣ ལས་བཞེངས་ཏེ་སྤུ་ན་ཁར་ཕེབས་ད་ སྡེ་སྲིད་འབྲུག་རབ་རྒྱས་ཀྱིས་ ཞབས་དྲུང་ངོ་ཚབ་བཀྲོང་ནིའི་ངན་སྤྱོད་སྣ་ཚོགས་བརྩམ་ནི་འགོ་བཙུགས་ནུག། སྤྱི་ལོ་ ༡༧༡༢ ལུ་ རྒྱལ་སྲས་མཆོག་རྒྱལ་ཁྲི་སྤངས་ཏེ་དབང་འདུས་ཕོ་བྲང་ལུ་བཞུགསཔ་ད་ སྡེ་སྲིད་ཀྱིས་དབང་འདུས་མགྲོན་གཉེར་ལུ་ རྒྱལ་སྲས་བཀྲོངས་དགོཔ་སྦེ་ བཀའ་གནང་ནུག། སྤྱི་ལོ་ ༡༧༡༣ ལུ་ རྒྱལ་སྲས་མཆོག་དགུང་ལོ་ ༢༥ བཞེསཔ་ད་ ཁོ་ཐང་ཁ་ལུ་དུག་དྲངས་ཏེ་བཀྲོངས་བཏང་ནུག། '''ཞབས་དྲུང་ཕྱོགས་ལས་རྣམ་རྒྱལ་གསེར་ཁྲིར་མངའ་གསོལ།''' སྤྱི་ལོ་ ༡༧༠༧ ལུ་ཞབས་དྲུང་རིན་པོ་ཆེའི་ཐུགས་དམ་དཀྲོགས་ཏེ་ ཡང་སྲིད་འབྱོན་དགོཔ་སྦེ་གསོལཝ་བཏབ་ལས་ སྤྲུལ་སྐུ་དང་པ་ ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ སྤྱི་ལོ་ ༡༧༠༨ ལུ་དར་དཀར་ཉི་གདུགས་ཁ་ལུ་སྐུ་འཁྲུངས་ནུག། སྤྱི་ལོ་ ༡༧༡༤ ལུ་མཆོག་སྤྲུལ་ཕྱོགས་ལས་རྣམ་རྒྱལ་ དགུང་ལོ་བདུན་བཞེསཔ་ད་ ཞབས་དྲུང་གི་རྒྱལ་ཚབ་གསུམ་པའི་གསེར་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག། '''མི་སེར་གྱི་བདེ་ཐབས།''' ང་བཅས་རའི་རྒྱལ་ཁབ་ནང་ སྔར་སྲོལ་མི་སེར་གུང་གཅིག་ལུ་ བརྒྱུད་འཛིན་གྱི་བུ་གཞི་མེད་པའི་རིགས་ཀྱི་ཕ་གཞིས་རབས་ཆད་ཡོད་མི་ཚུ་ གཞུང་གིས་བཞེས་གནང་སྲོལ་ཡོད་མི་འདི་ མི་སེར་གྱི་སྐྱིད་སྡུག་ལུ་གཟིགས་ཏེ་ བསྡུ་མ་དགོ་པར་མཛད་ཡོདཔ་མ་ཚད། རྨགཔ་ཤི་བའི་ཨམ་སྲུ་ཚུ་ རྨགཔ་གི་རོ་དང་གཅིག་ཁར་ གསོན་སྲེག་གཏང་སྲོལ་ཡོད་པའི་ལཱ་ངན་འདི་ཡང་ སྡེ་སྲིད་བཞུགས་པའི་རིང་ལུ་རྦད་བཅད་གནང་ནུག། '''བསོད་ནམས་དགེ་བའི་མཛད་པ།''' སྤྱི་ལོ་ ༡༧༡༥ ལུ་ སྡེ་སྲིད་མཆོག་གིས་ ཐིམ་ཕུག་ལུ་བཀའ་འགྱུར་སྐྱ་པོད་གསར་བཞེངས་དང་ བདེ་ཆེན་ཕོ་བྲང་གི་སྒང་ དབང་འདུས་རྩེ་ལུ་ ཟབ་དོན་ལྷུན་རྩེ་གཙུག་ལག་ཁང་གསར་བཞེངས་གནང་ནུག། དེ་ལས་ཡི་དམ་གྱི་སྐུ་མ་འདྲཝ་ ༡༡༥ འི་སྐུ་པར་བྱེ་བ་བཞུགས་པའི་རྟེན་སྒྲོམ་བརྒྱད། བདེ་གཤེགས་མཆོད་རྟེན་བརྒྱད་ལ་སོགས་པའི་རྟེན་གསུམ་བཞེངས་གནང་ནུག། '''སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ།''' སྤྱི་ལོ་ ༡༧༡༩ ལུ་གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་ཕེབས་པའི་སྐབས་ སྡེ་སྲིད་ཁོ་ར་གིས་གསར་བཞེངས་གནང་ཡོད་པའི་དབང་འདུས་རྩེ་ཟབ་དོན་ལྷུན་རྩེ་ལུ་ སྐུ་ངལ་གནང་སྟེ་བཞུགས་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༧༢༠ ལུ་ཁོ་རའི་སྐུ་ཚབོ་ དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་ སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ལུ་བསྐོ་བཞག་གནང་སྟེ་ ཁོ་ར་དགོངས་ཞུ་མཛད་གནང་ནུག། '''སྡེ་ཁྲི་ལས་དགོངས་ཞུའི་རྗེས་ཀྱི་མཛད་པ།''' སྡེ་སྲིད་འབྲུག་རབ་རྒྱས་དགོངས་ཞུ་ཞིནམ་ལས་ ཟབ་དོན་ལྷུན་རྩེ་ལུ་བཞུགས་ཏེ་ མཆོག་སྤྲུལ་ཕྱོགས་ལས་རྣམ་རྒྱས་རྩ་བའི་བླ་མ་སྦེ་བསྟེན་ཏེ་ བསྙེན་རྫོགས་ཀྱི་སྡོམ་པ་ཞུ། མ་ཎི་དུང་སྒྲུབ་བཙུགས་ཏེ་ དགེ་འདུན་གྱི་སྡེ་ལུ་བསྙེན་བཀུར་ཞབས་ཏོག་སྦོམ་སྦེ་ཞུ་སྟེ་ བསོད་ནམས་དགེ་བའི་ལཱ་ལུ་བརྩོན་བཞུགས་ནུག། '''གཞུང་སྲིད་ལུ་ཐེ་གཏོགས།''' ཧེ་མ་ཁོ་གིས་བཀྲོང་མི་ རྒྱལ་སྲས་སྤྲུལ་སྐུ་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་འཇིགས་མེད་ནོར་བུ་ སྤྱི་ལོ་ ༡༧༡༧ ལུ་ སྐུ་འཁྲུངས་མི་འདི་གཞུང་དང་དགེ་འདུན་གྱིས་ངོས་འཛིན་མཛད་མི་ལུ་ སྡེ་སྲིད་བགྲེས་པ་གིས་ ངལ་མ་རངས་པར་གཞུང་དང་དགེ་འདུན་པའི་ཕྱག་ལཱ་ནང་ལགཔ་རྐྱབ་ཏེ་ བར་ཆད་སྣ་ཚོགས་བརྩམས་དོ་ཡོདཔ་མས། རྒྱལ་སྲས་སྐུ་ཚེ་གོང་མའི་གྲྭ་སློབ་དང་ དགེ་འདུན་མང་རབས་ཅིག་གིས་ སྡེ་སྲིད་བགྲེས་པ་ལུ་ ངལ་མ་རངས་པར་ནང་འཁྲུགས་ལོང་ནུག། སྡེ་སྲིད་བགྲེས་པ་དང་ཁོ་རའི་ཕྱོགས་གཏོགས་ཚུ་གིས་ དམག་ལན་རྐྱབ་རུང་ གཞུང་དམག་ལུ་འབད་མ་ཚུགས་པར་ བོད་རྒྱལ་མི་དབང་བསོད་ནམས་སྟོབས་རྒྱས་ལུ་དམག་རྒྱབ་ཞུ་ནུག། བོད་ལུ་དམག་རྒྱབ་ཞུ་སྟེ་རུང་ བོད་ལས་ངོས་ལེན་གྱི་ཡི་གུ་མ་ལྷོད་པའི་བར་ན་ སྡེ་སྲིད་བགྲེས་པ་གིས་ གཞུང་དམག་ལུ་འབད་མ་ཚུགས་པར་ ཐིམ་ཕུག་ལས་བྱོག་བྱོན་ཏེ་ ཧཱ་གླང་ཆུ་ལུ་ལྷོདཔ་ད་ གཞུང་དམག་ཚུ་གིས་བདའ་ཟུནམ་ལས་ སྤ་རོ་ལུ་ཆུ་ནང་བཀོ་སྟེ་བཀྲོང་པའི་ལོ་དེ་ སྤྱི་ལོ་ ༡༧༢༩ ལུ་ཨིན་མས། དེ་ལས་ཕར་ རྒྱལ་སྲས་སྤྲུལ་སྐུ་ཀུན་དགའ་རྒྱལ་མཚན་དང་ འཇིགས་མེད་ནོར་བུ་སྐུ་ཕྲེང་གཉིས་ཀྱི་ཕྱོགས་གཏོགས་སྡེ་ཚན་ཅིག་དང་ སྡེ་སྲིད་བགྲེས་པ་འབྲུག་རབ་རྒྱས་དང་ ཞབས་དྲུང་ཡང་སྲིད་ཕྱོགས་ལས་རྣམ་རྒྱལ་ཕྱོགས་གཏོགས་ སྡེ་ཚན་གཅིག་ལུ་སོང་བའི་ཕུང་སྲི་དང་གདོང་ལེན་དེ་ རྒྱལ་ཁབ་ནང་ཡུན་རིང་ལུས་ཡོདཔ་ལས་ དུས་ཚོད་དེ་ལུ་ རྒྱལ་རབས་མཁན་པོ་ཚུ་གི་ནང་ཟིང་བར་མའི་དུས་སྐབས་ཟེར་ངོས་འཛིན་འབདཝ་ཨིན་ནོ། །</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ས་སྐྱོང་མི་དབང་ངག་དབང་རྒྱ་མཚོའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ ས་སྐྱོང་མི་དབང་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ གཡུས་ཝང་ཚ་ལུང་ནང་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་། སྡེ་སྲིད་མཆོག་གིས་ སྐུ་ཡོན་མཁས་པ་སྦྱངས་ཏེ་ དགེ་བཤེས་ཀྱི་མཚན་ཐོབ་ཡོདཔ་དང་ ཤུལ་ལས་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ཕེབས་ཞིནམ་ལས་ ཆོས་རྒྱལ་གྱི་མཚན་ཡང་ཐོབ་ནུག། དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་ཀྱི་སྐུ་ཚ་བོ་ཨིན་མས། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ གྲྭ་ཚང་འདུས་སྡེ་ལུ་བཞུགས་ཏེ་ སྐུ་ཡོན་དང་སྒྲིག་ལམ་ དཀྱིལ་མཆོག་གི་དབྱངས་ཐིག་གར་གསུམ་ལུ་མཁས་པ་སྦྱངས་ཡོདཔ་མ་ཚད་ སྒྲ་རིག་པ་དང་སྙན་ངག། སྡེབ་སྦྱོར་སོགས་རིག་གནས་ཚུ་ བླ་མ་ཙནྡྲ་པ་ལས་མཐར་ཕྱིན་སྦེ་མཛད་དེ་ དགེ་བཤེས་ཀྱི་མཚན་ཡོངས་གྲགས་ཐོན་ཡོདཔ་ལས་ དགེ་འདུན་པའི་ཚོགས་ནང་ལས་དྲག་ཤོས་ཅིག་ཨིན་མས།
+ཞབས་དྲུང་གསུང་སྤྲུལ་དང་པ་ ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ སྤྱི་ལོ་ ༡༧༡༣ ལུ་ དབང་འདུས་ཕོ་བྲང་རྫོང་ལུ་གདན་འདྲེན་ཞུ་སྟེ་་ སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་ཀྱིས་ ས་སྐྱོང་མི་དབང་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྤྲུལ་སྐུ་ལུ་ སྐུ་ཡོན་ཕུལ་མི་སློབ་དཔོན་སྦེ་བཀལ་གནང་ནུག།
+སྡེ་སྲིད་འབྲུག་རབ་རྒྱས་མཆོག་ སྤྱི་ལོ་ ༡༧༡༩ ལུ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་དེ་  སྤྱི་ལོ་ ༡༧༢༠ པའི་གསར་ཚེས་ཀྱི་ཟླཝ་དེ་ནང་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ ཁོ་རའི་ཚ་བོ་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།
+སྤྱི་ལོ་ ༡༧༢༠ ལུ་སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་འབྱོན་པའི་དུས་ལུ་ སྤྱི་ལོ་ ༡༧༡༤ ལས་ཞབས་དྲུང་གསུང་སྤྲུལ་དང་པ་ རྗེ་བཙུན་ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ བླམ་ཁྲི་པའི་གསེར་ཁྲི་ལུ་བཞུགས་ཡོདཔ་དང་། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཀྱི་ཡང་སྲིད་ཨིནམ་སྦེ་ངོས་འཛིན་གྲུབ་སྟེ་ སྤྱི་ལོ་ ༡༧༢༡ ལས་ སྒང་སྟེང་སྤྲུལ་སྐུ་བསྟན་འཛིན་ལེགས་པའི་དོན་གྲུབ་ཀྱི་བླ་ཚབ་སྦེ་མཛད་བཞུགས་ནུག། རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་མཆོག་ སྤྱི་ལོ་ ༡༧༡༧ ལུ་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་སྦེ་སྐུ་འཁྲུངས་ནུག།
+ 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་གིས་ དཀྱིལ་ཆོག་གར་ཐིག་དབྱངས་གསུམ་ཡར་རྒྱས་དང་ གུ་རུ་རིན་པོ་ཆེའི་སྒྲུབ་གནས་ཚུ་ནང་ གསོལ་འདེབས་དང་ལྷན་སྐྱེས་ཚུ་བཙུགས་གནང་ཡོདཔ་མ་ཚད་ སྡེབ་སྦྱོར་རིན་ཆེན་འབྱུང་གནས་ ཟ་མ་ཏོག་དང་ སུམ་རྟགས་དང་ སྒྲ་ཀ་ཙན་དབྱངས་གསུམ་ལ་སོགས་པའི་རིག་གནས་ཚུ་ཡང་བཙུགས་གནང་ནུག།<br>
+
+གདན་ས་སྤུ་ན་ཁ་ལུ་ འཇམ་དཔལ་དབྱངས་དང་ གུ་རུ་པདྨ་འབྱུང་གནས སྤྱན་རས་གཟིགས་ཀྱི་སྐུ་ཚུ་དང་ ལྕགས་རི་ལུ་ཞབས་དྲུང་རིན་པོ་ཆེའི་གསེར་སྐུ་དང་ ཐིམ་ཕུག་ལུ་རྒྱ་བོད་ཀྱི་ལོ་པཎ་ཚུ་གི་ཐང་ཀ་ཚུ་ཡང་གསར་བཞེངས་མཛད་གནང་ནུག། དེ་མ་ཚད་ རྒྱལ་བའི་བཀའ་འགྱུར་ཆེན་མོ་དང་ རྗེ་བཙུན་མི་ལའི་རྣམ་ཐར་དང་མགུར་འབུམ་ལ་སོགས་པའི་གསུང་རྟེན་མང་རབས་ཅིག་གསར་སྒྲུབ་གནང་སྟེ་ ཆོས་རྒྱལ་བྱང་ཆུབ་སེམས་དཔའ་ངག་དབང་རྒྱ་མཚོ་ཟེར་བའི་མཚན་དར་ཁྱབ་ཡར་སོ་ནུག།</big>
+ 
+==== མཛད་པ་མཐའ་མ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་དང་ རྒྱལ་སྲས་སྐུ་ཚེ་སྔ་མ་ཀུན་དགའ་རྒྱལ་མཚན་གཉིས་ཀྱི་བར་མ་འགྲིགས་པར་ ལཱ་ངན་མང་རབས་ཅིག་འབད་དེ་ སྤུ་ན་ཁ་ལུ་ནང་འཁྲུག་ལང་བའི་དུས་སྐབས་ལུ་ སྡེ་སྲིད་འབྲུག་རྣམ་རྒྱལ་གྱི་ཕྱོགས་གཏོགས་ཚུ་གིས་ སྤྱི་ལོ་ ༡༧༢༩ ལུ་ ཆོས་རྒྱལ་ངག་དབང་རྒྱལ་མཚན་སྡེ་ཁྲི་ལས་དགོངས་ཞུ་བྱོན་པའི་མཐའ་མ་ བཙོན་བཙུགས་འབད་དེ་བཀྲོངས་ད་ནུག་གོ།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་པ་ས་སྐྱོང་མི་དབང་གོང་ས་མི་ཕམ་དབང་པོའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྤྱི་ལོ་ ༡༧༠༩ ཟླཝ་ ༡༠ པའི་ཚེས་ ༨ ལུ་ གཡུས་མང་སྡེ་ལས་ ཡབ་རྟ་མགྲིན་ཚེ་དབང་དང་ ཡུམ་ངག་དབང་བུ་དར་གཉིས་ཀྱི་སྲས་ལུ་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཀྱི་ཡང་སྲིད་སྦེ་ བོན་སྦྱིས་ཆོས་རྗེའི་གདུང་བརྒྱུད་ལུ་སྐུ་འཁྲུངས་ནུག།  སྐུ་ན་ཆུང་ཀུའི་དུས་སྐབས་ལུ་ མཚན་ངག་དབང་རྒྱལ་མཚན་ཟེར་གསོལ་ཡོད་རུང་ རྒྱལ་དབང་ཀརྨ་པ་བཅུ་གཉིས་པ་བྱང་ཆུབ་རྡོ་རྗེ་དང་ ཞྭ་དམར་སྐུ་འཕྲེང་བརྒྱད་པ་ དཔལ་ཆེན་ཆོས་ཀྱི་དོན་གྲུབ་གཉིས་ བུམ་ཐང་ཐང་སྦིས་ལུ་ གནས་མཇལ་བར་འབྱོནམ་ད་ ངག་དབང་རྒྱལ་མཚན་མཆོག་མཇལ་བར་བྱོན་ཏེ་ ཆོས་ཀྱི་འབྲེལ་བ་ཞུ་བའི་མཚན་ རིན་ཆེན་ཕྲིན་ལས་རབ་རྒྱས་ཟེར་གསོལ་ཡོདཔ་ཨིན་མས། <br>
+
+ཞབས་དྲུང་ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་གིས་ མཚན་ངག་དབང་བསྟན་འཛིན་འབྲུག་རྒྱས་ཟེར་གསོལ་གནང་ཡོད་རུང་ རྗེ་ངག་དབང་ལྷུན་གྲུབ་ཀྱིས་ ངག་དབང་བསྟན་འཛིན་མི་ཕམ་དབང་པོ་ཟེར་མཚན་གསོལ་གནང་ནུག། ཤུལ་ལས་ གོང་སའི་གོ་གནས་བཞེསཔ་དང་གཅིག་ཁར་ གོང་ས་མི་ཕམ་དབང་པོ་ཟེར་བའི་མཚན་ ཡོངས་གྲགས་སོང་ཡོདཔ་ཨིན་མས། སྡེ་སྲིད་མཆོག་ དགུང་ལོ་བདུན་ལས་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཀྱི་སྤྲུལ་སྐུ་སྦེ་ངོས་འཛིན་འཁྲུལ་མེད་གནང་སྟེ་ རྟ་མགོ་ཆོས་དབྱིངས་ཕོ་བྲང་ལུ་མངའ་གསོལ་ཞུ་ནུག། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ དགུང་ལོ་བདུན་བཞེསཔ་ད་ བཀྲ་ཤིས་ཆོས་རྫོང་ལུ་བྱོན་ཏེ་ གྲྭ་ཚང་དགེ་འདུན་གྱི་སྡེ་ལུ་བཞུགས་པའི་སྐབས་ མཁན་ཆེན་ཁྲི་རབས་ལྔ་པ་ བཟོད་པ་ཕྲིན་ལས་ལས་ བསླབ་སྡོམ་བཞེས་ཡོད་པའི་ཁར་ སྐུ་ཡོན་དང་དབང་ལུང་ཁྲིད་གསུམ་གྱི་རིམ་པ་ཚུ་ སྔགས་འཆང་རྒྱལ་བྱེད་ ཚལ་པ་བསྟན་པ་རྒྱ་མཚོ་དང་ རྗེ་ངག་དབང་ལྷུན་གྲུབ། རྗེ་ངག་དབང་ཕྲིན་ལས། དེ་ལས་ སྒང་སྟེང་སྤྲུལ་སྐུ་བསྟན་འཛིན་ལེགས་པའི་དོན་གྲུབ་ཚུ་ རྩ་བའི་བླམ་སྦེ་བསྟེན་ཏེ་ སྦྱང་བ་མཐར་ཕྱིནམ་སྦེ་མཛད་གནང་ནུག།<br>
+
+སྤྱི་ལོ་ ༡༧༢༡ གི་ལོ་ལུ་ གཞུང་ལུ་གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ བླ་མའི་ཚབ་སྦེ་བཞུགས་དགོ་པའི་སྐོར་ལས་ ཞུ་བ་ཕུལ་ཡོདཔ་ཨིན་མས། དེ་ཡང་ ཐུགས་སྲས་པདྨ་ཕྲིན་ལས་ཀྱི་ཡང་སྲིད་ སྒང་སྟེང་སྤྲུལ་སྐུ་བསྟན་འཛིན་ལེགས་པའི་དོན་གྲུབ་མཆོག་ སྐུ་ན་རྒས་མི་ལུ་བརྟེན་ཏེ་ཞུ་བ་ཕུལཝ་ལས་ དེ་ལུ་ གཞུང་གི་ཡང་ངོས་ལེན་མཛད་དེ་ དགུང་ལོ་ ༡༣ ལས་ གདན་ས་སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་ལུ་བླ་ཚབ་མཛད་དེ་བཞུགས་ནུག།<br>
+
+སྤྱི་ལོ་ ༡༧༢༩ ལུ་ གོང་ས་མི་ཕམ་དབང་པོ་དང་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་གཉིས་ སྡེ་སྲིད་ཁྲི་རབས་ ༩ པ་ ཆོས་རྒྱལ་ངག་དབང་རྒྱ་མཚོ་དང་ མཁན་ཆེན་ཁྲི་རབས་ ༦ པ་ རྗེ་ངག་དབང་ལྷུན་གྲུབ། དེ་ལས་ དགེ་འདུན་པའི་སྡེ་དམངས་ཀྱིས་ གདན་འདྲེན་ཞུ་ཞིནམ་ལས་ གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་པའི་ཁྲི་ལུ་ མངའ་གསོལ་ཞུ་ཡོདཔ་དང་ དེའི་དུས་ལུ་ར་ རྒྱས་སྲས་འཇིགས་མེད་ནོར་བུ་མཆོག་ བླམ་ཁྲི་པ་བཞི་པའི་གསེར་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག། སྤྱི་ལོ་ ༡༧༣༠ ལུ་ བོད་དམག་ཐེངས་གཉིས་པ་དང་ དཀར་སྦིས་དོན་གྲུབ་ཀྱི་དམག་འོངས་ཏེ་ ནང་འཁྲུག་བྱུངམ་ལས་གོང་ས་མི་ཕམ་དབང་པོ་དང་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་གཉིས་ དབང་འདུས་ཕོ་བྲང་ལུ་འབྱོན་དགོཔ་ཐོན་ནུག། དེའི་དམག་ལན་རྐྱབ་སྟེ་ བོད་དམག་དང་དཀར་སྦིས་དོན་གྲུབ་ཀྱི་དམག་དཔུང་ཚུ་ ཐིམ་ཕུག་ལས་སྤ་རོ་ཚུན་ཚོད་བདའ་བཏང་ནུག།<br>
+ 
+ཆིངས་ཡིག་ཅིག་ནང་བཀོད་ཡོད་དོ་བཟུམ་ སྤྱི་ལོ་ ༡༧༣༡ ལུ་  དཀར་སྦྱིས་དོན་གྲུབ་ཀྱིས་ སྤ་རོ་འདི་ ཁོ་རའི་མངའ་འོག་ལུ་ཚུདཔ་ལས་ རང་ཐག་རང་བཅད་ཀྱི་ཐོག་ལས་ སྤ་རོ་སྤྱི་བླ་བཟོ་སྟེ་སྡོད་ཡོདཔ་ཨིན་མས། དེ་གིས་སྦེ་ གཞུང་དང་དཀར་སྦྱིས་དོན་གྲུབ་གཉིས་ཀྱི་བར་ན་ ནང་འཁྲུག་ལངས་ཡོདཔ་ལས་ སྤྱི་ལོ་ ༡༧༣༢ ལུ་ ཐིམ་ཕུག་ལུ་བོད་དམག་ཐོན་ནུག། སྤྱི་ལོ་ ༡༦༣༤ ལུ་ དཀར་སྦྱིས་དོན་གྲུབ་གྱོངས་སོཔ་ལས་ མི་དབང་བསོད་ནམས་སྟོབས་རྒྱས་ཀྱིས་ སྤ་རོ་མངའ་ཞབས་འདི་ གཞུང་ལུ་རྩིས་སྤྲོད་འབད་ནུག། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་གིས་ གསེར་ཟངས་ཀྱི་ཚེ་དཔག་མེད་མི་ཚད་མ་དང་ ཨོ་རྒྱན་རིན་པོ་ཆེ་གཙོ་འཁོར། བཀའ་བརྒྱུད་གསེར་ཕྲེང་། གུ་རུ་རིན་པོ་ཆེ་ལོ་བརྒྱད་པའི་ཚད་ཅན། ཚེ་དཔག་མེད། ཞབས་དྲུང་རིན་པོ་ཆེའི་སྐུ་འདྲ་མི་ཚད་མ། ཀུན་མཁྱེན་པད་དཀར་མི་ཚད་མ། དེ་ལས་ མཁན་སློབ་ཆོས་གསུམ་ཚུ་གསར་བཞེངས་མཛད་གནང་ནུག།</big>
+  
+==== མཛད་པ་མཐའ་མ་དང་ དགོངས་ཞུ་མཛད་པའི་ཤུལ་གྱི་མཛད་པ། ====
+<big>སྤྱི་ལོ་ ༡༧༣༥ ལུ་གནམ་བྱཱར་གྱི་དུས་ལུ་ གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་གི་ནུ་གཅུང་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་མཆོག་དགོངས་པ་རྫོགས་ཡོདཔ་ལས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་ནིའི་ཐུགས་བསམ་བཞེད་ནུག། སྤྱི་ལོ་ ༡༧༣༥ ལུ་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངསམ་ཞུ་ནི་སྦེ་བཀའ་རྒྱ་གནང་ཡོད་རུང དེ་ལུ་ མཁན་སློབ་གྲྭ་ཚང་ཚུ་གིས་ ངོས་ལེན་མཛད་མ་བཏུབ་པར་ སྡེ་སྲིད་གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ ཁྲི་ཁར་བཞུགས་དགོཔ་སྦེ་ གསོལཝ་བཏབ་རུང་ སྤྱི་ལོ་ ༡༧༣༦ ཟླཝ་ ༡ པའི་ཚེས་ ༢༥ ལུ་ སྡེ་ཁྲི་ལས་ རང་ཐག་རང་བཅད་ཐོག་ལས་ བོད་གངས་ཅན་ལུ་གནས་གཟིགས་པར་བྱོན་ནུག།<br>
+
+གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ འབྲུག་ལུ་ལོག་སྟེ་བྱོན་ཞིནམ་ལས་ སྤྱི་ལོ་ ༡༧༣༦ ཟླཝ་ ༤ པའི་ཚེས་ ༢༡ ལུ་ མཆོག་སྤྲུལ་ཕྱོགས་ལས་རྣམ་རྒྱལ་དགོངས་པ་རྫོགས་སོམ་ལས་ བླ་མ་ཁྲི་པའི་བདག་རྐྱེན་གསོལ་གནང་ནུག། <br>
+
+སྤྱི་ལོ་ ༡༧༣༨ ཟླཝ་ ༤ པའི་ནང་ གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་གཟུགས་མ་བདེ་བར་ སྐུ་རིམ་མ་བཏུབ་བཏུབ་སྦེ་མཛད་ཡོད་རུང་ ཕན་ཐོགས་འབྱུང་མ་ཚུགས་པར་ ཟླཝ་ ༥ པའི་ཚེས་ ༡༥ ལུ་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
+
 
 
 === ཁུངས་གཏུག། ===
