/* མཛད་པ་མཐའ་མ་དང་ དགོངས་ཞུ་མཛད་པའི་ཤུལ་གྱི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -103,7 +103,35 @@
 
 སྤྱི་ལོ་ ༡༧༣༨ ཟླཝ་ ༤ པའི་ནང་ གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་གཟུགས་མ་བདེ་བར་ སྐུ་རིམ་མ་བཏུབ་བཏུབ་སྦེ་མཛད་ཡོད་རུང་ ཕན་ཐོགས་འབྱུང་མ་ཚུགས་པར་ ཟླཝ་ ༥ པའི་ཚེས་ ༡༥ ལུ་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཅིག་པ་ཁུ་བོ་དཔལ་འབྱོར་གྱི་མཛད་རྣམ། ༼༡༧༣༦-༡༧༤༠༽ ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོད་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཅིག་པ་ ཁུ་བོ་དཔལ་འབྱོར་མཆོག་ མང་སྡེ་སྦོན་སྦིས་ཆོས་རྗེའི་གདུང་རྒྱུད་ལུ་འཁྲུངས་ཡོདཔ་དང་ སྡེ་སྲིད་བཅུ་པ་གོང་ས་མི་ཕམ་དབང་པོ་དང་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་གཉིས་ཀྱི་ཨ་ཁུ་ཨིནམ་ལས་ སྡེ་སྲིད་མཛདཔ་ད་དང་ རྒྱ་རབས་ཚུ་ནང་ལུ་ ཁོ་གི་མཚན་ཁུ་བོ་དཔལ་འབྱོར་ཟེར་དར་ཁྱབ་བྱུང་ནུག། སྤྱི་ལོ་ ༡༧༡༧ མེ་བྱ་གི་ལོ་ལུ་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་འཇིགས་མེད་ནོར་བུ་ སྦོན་སྦིས་ཆོས་རྗེའི་གདུང་རྒྱུད་ལུ་ སྡེ་སྲིད་བཅུ་པ་མི་ཕམ་དབང་པོའི་ནུ་གཅུང་སྦེ་འཁྲུངས་ཏེ་ ཁུ་བོ་དཔལ་འབྱོར་ཡང་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ ཆོས་ཕྱོགས་ཀྱི་ཡོན་ཏན་དང་ འབྲི་ལྷག་ཤེས་ཡོན་ཚུ་སྦྱང་བརྩོན་གནང་སྟེ་ ལྕོགས་གྲུབ་ཅན་ཅིག་འབདཝ་ལས་ གོང་ས་མི་ཕམ་དབང་པོའི་ནུ་གཅུང་གི་ཕྱག་ཞུ་མི་སྦེ་བཞུགས་ནུག། མཁན་ཆེན་ངག་དབང་ལྷུན་གྲུབ་དང་དགེ་འདུན་འདུས་དམངས། སྡེ་སྲིད་དང་གཞུང་ཚོགས་ལྷན་རྒྱས་ཚུ་གིས་ སྤྱི་ལོ་ ༡༧༢༩ ས་བྱ་གི་ལོ་ལུ་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་མཆོག་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་སྦེ་ངོས་འཛིན་འབད་དེ་ བླམ་ཁྲི་པ་བཞི་པའི་མངའ་གསོལ་ཞུཝ་ད་ ཁུ་བོ་དཔལ་འབྱོར་འདི་ རྒྱལ་སྲས་ཀྱི་གཟིམ་དཔོན་སྦེ་ཕྱག་ཞུ་སྟེ་བཞུགས་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ། ====
+<big>སྤྱི་ལོ་ ༡༧༣༥ ཤིང་ཡོས་ཀྱི་ལོ་ལུ་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་ཞིང་ལུ་ཕེབས་སོཔ་ལས་ གཟིམ་དཔོན་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ རྒྱལ་སྲས་ཀྱི་དགོངས་རྫོགས་ཚུ་བསྒྲུབས་ཏེ་བཞུགས་པའི་བར་ན་ སྡེ་སྲིད་བཅུ་པ་གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྤྱི་ལོ་ ༡༧༣༦ མེ་འབྲུག་ཟླཝ་ ༡ པའི་ནང་ སྡེ་ཁྲི་སྤངས་ཏེ་གསང་བའི་་ཐོག་ལས་ བོད་ཕྱོགས་ལུ་བྱོན་ནུག། དུས་སྐབས་ཅིག་ སྡེ་སྲིད་ཀྱི་འོས་འབབ་ཡོད་མི་གཞན་ག་ཡང་མེདཔ་ལས་ མཁན་ཆེན་ངག་དབང་ཕྲིན་ལས་དང་གྲྭ་ཚང་གིས་ རྒྱལ་སྲས་ཀྱི་གཟིམ་དཔོན་ཁུ་བོ་དཔལ་འབྱོར་ སྡེ་སྲིད་ཁྲི་རབས་བཅུ་གཅིག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big> 
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ====
+===== ལྕགས་རི་རྡོ་རྗེ་གདན་གྱི་གཙུག་ལག་ཁང་གསར་བཞེངས། =====
+<big>སྤྱི་ལོ་ ༡༧༣༦ གནམ་ལོ་མེ་འབྲུག་ལོ་དེ་ནང་ ནང་མ་མཐུན་པའི་དམ་ཚིག་ཉམས་པའི་དབང་གིས་ ལྕགས་རི་རྡོ་རྗེ་གདན་མེ་རྐྱེན་ཤོར་ཡོད་མི་ བསྐྱར་བཞེངས་ཀྱི་འགན་ཁག་བཞེས་ཏེ་ གཙུག་ལག་ཁང་འདི་ གསར་བཞེངས་གནང་སྟེ་ ཧེ་མ་བ་ལྷགཔ་སྦེ་བཞེངས་ཡོདཔ་མ་ཚད་ དངུལ་འབུམ་མཆོད་རྟེན་དང་ གཞན་ནང་རྟེན་ལེ་ཤ་ར་བཞེངས་གནང་ནུག།</big>
 
+===== གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ བླམ་ཁྲི་པ་ལྔ་པ་སྦེ་གསོལ་ཡོདཔ། =====
+<big>སྤྱི་ལོ་ ༡༧༣༦ ལུ་ གོང་ས་མི་ཕམ་དབང་པོ་བོད་ལུ་བྱོན་པའི་ཤུལ་མ་ དགེ་འདུན་དམངས་དང་མཁན་ཆེན་ངག་དབང་ཕྲིན་ལས། བློན་པོ་ཚུ་གིས་ གོང་ས་མི་ཕམ་དབང་པོ་ལོག་སྟེ་འབྲུག་ལུ་འབྱོན་དགོ་པའི་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ ལོག་སྟེ་འབྲུག་ལུ་བྱོན་ནུག།  སྡེ་སྲིདདང་མཁན་ཆེན་ཚུ་གིས་ གོང་ས་གི་ཞབས་བསུ་གཅར་བར་ ལྕང་གླིང་མའི་ཐང་ནང་ བྱོན་ཡོདཔ་དང་། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྡེ་སྲིད་བཅུ་གཅིག་པ་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ བླ་མ་ཁྲི་པ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+==== སྐུ་རྟེན་དང་གཙུག་ལག་ཁང་གསར་བཞེངས་གནང་ཡོདཔ། ====
+<big>གནས་རྟེན་ལྷ་ཁང་དང་། སྤྱན་རས་གཟིགས་ལྷ་ཁང་། ཐུབ་དབང་ལྷ་ཁང་ལ་སོགས་པ་ གསར་བཞེངས་གནང་ཡོདཔ་དང་ ཧེ་མ་གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྡེ་སྲིད་བཅུ་པ་སྦེ་བཞུགས་པའི་སྐབས་ལུ་ སྤྱན་རས་གཟིགས་ལྷ་ཁང་ནང་འགོ་བརྩམས་ཡོད་མི་ གསེར་ཟངས་ཀྱིས་བཞེངས་མི་ སྤྱན་རས་གཟིགས་ཀྱི་སྐུ་འདྲ་ ཐོག་ཚད་གསུམ་འབད་མི་འདི་འཕྲོ་མཐུད་དེ་ མཇུག་བསྡུ་གནང་ནུག།</big>
+===== གྲྭ་ཚང་ནང་སྒྲ་པའི་སྡེ་ལོག་སྟེ་བཙུགས་གནང་ཡོདཔ། =====
+<big>སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་གིས་ སྒྲ་པའི་སྡེ་ཚན་བཙུགས་གནང་ཡོད་མི་འདི་ བར་སྐབས་ཅིག་ལས་ ནང་འཁྲུག་ལུ་བརྟེན་ཏེ་ ཁ་གཏོར་སོང་མི་འདི་ སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ སློབ་དཔོན་ངག་དབང་དཔལ་ལྡན་བཟང་པོ་གདན་འདྲེན་ཞུ་ཞིནམ་ལས་ སྒྲ་པའི་སྡེ་ཚན་འདི་ ལོག་སྟེ་ར་ བཙུགས་གནང་ནུག།</big>
+===== རྗེ་མཁན་ཁྲི་རབས་བརྒྱད་པའི་མངའ་གསོལ། ===== 
+<big>མཁན་ཁྲི་རབས་བདུན་པ་ ངག་དབང་ཕྲིན་ལས་མཆོག་ ཟུར་བཞུགས་གནང་བའི་སྐུ་ཚབ་སྦེ་ བླ་མ་ཁྲི་པ་ལྔ་པ་གོང་ས་མི་ཕམ་དབང་པོའི་དགོངས་བཞེས་ལྟར་ ལ་དྭགས་རྒྱལ་སྲས་བསྟན་འཛིན་ནོར་བུ་ མཁན་ཆེན་ཁྲི་རབས་བརྒྱད་པ་སྦེ་མངའ་གསོལ་ཞུ་ནུག།</big>
+===== རྒྱལ་སྲས་སྐུ་འཕྲེང་གསུམ་པ་གདན་འདྲེན་ཞུ་ཡོདཔ། =====
+<big>སྤྱི་ལོ་ ༡༧༣༧ མེ་སྦུལ་གྱི་ལོ་ལུ་ ཀུར་སྟོད་དུང་དཀར་ལུ་ རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུའི་ཡང་སྲིད་ འབྲུག་སྒྲ་རྣམ་རྒྱལ་འདི་ ཆོས་རྗེའི་སྲས་ལུ་སྐུ་འཁྲུངས་ནུག། ཡང་སྲིད་འབྲུག་སྒྲ་རྣམ་རྒྱལ་འདི་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ ལྕོགས་གྲུབ་ཅན་ཅིག་ཨིནམ་དང་ ཞལ་གསུང་ནི་མཁྱེན་པའི་བསྒང་ལས་ ཚེ་ཧེ་མའི་ལོ་རྒྱུས་ཚུ་གསུངསམ་མ་ཚད་ ཤུལ་ལས་རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུའི་ཡང་སྲིད་ཨིནམ་སྦེ་ ངོས་འཛིན་འབད་ཡོདཔ་ཨིན་མས། དགེ་འདུན་དམངས་དང་མཁན་ཆེན་ངག་དབང་བསྟན་འཛིན་ནོར་བུ་ཚུ་གིས་ཞུཝ་བཞིན་དུ་ སྡེ་སྲིད་ཀྱི་འགོ་འདྲེན་ཐོག་ལས་ རྒྱལ་སྲས་སྐུ་འཕྲེང་གསུམ་པ་གདན་འདྲེན་ཞུ་གནང་ནུག།</big>
+===== གོང་ས་མི་ཕམ་དབང་པོ་དགོངས་པ་རྫོགས་ཡོདཔ། =====
+<big>སྤྱི་ལོ་ ༡༧༣༨ ས་རྟ་ཟླཝ་ ༤ པའི་ཚེས་ ༡༥ ལུ་ གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་ལུ་བར་ཆད་བྱུངམ་ལས་གཤགས་སོཔ་ལས་ ལོ་གཅིག་གི་རིང་ ལོ་རྒྱུས་འདི་གསང་བ་སྦེ་བཞག་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༣༩ ས་ལུག་གི་ལོ་ལུ་ གསང་བ་གྲོལ་ཞིནམ་ལས་ ས་གནས་རྟ་མགོ་ལུ་ སྡེ་སྲིད་དང་མཁན་སློབ་དགེ་འདུན་ཚུ་གྱིས་ པུར་སྦྱང་ཚུ་ཡོངས་སུ་རྫོགསཔ་སྦེ་བསྒྲུབས་གནང་ནུག།</big>
+
+===== ༽ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེ་དང་དགའ་སྐྱིད། ===== 
+<big>རྒྱལ་བའི་བསྟན་པ་ལུ་ཞབས་ཏོག་དང་ མི་སེར་ཚུ་ལུ་བྱམས་པ་དང་བརྩེ་བའི་ཐོག་ལས་སྐྱོང་ནི་འདི་གིས་ ཆོས་ལུགས་དང་མི་ཚུ་ཀྱི་བར་ན་ཡང་ ཕྱོགས་རིས་མེདཔ་ལས་ སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ རྒྱལ་ཁབ་སྐྱོང་བའི་སྐབས་ རྐྱེན་ག་ནི་ཡང་མེད་པར་ ཆར་ཆུ་དུས་ལུ་བབས་ ས་ལས་ཐོན་པའི་ལོ་ཐོག་ཚུ་ལེགས་ ནད་གཞི་དང་མུ་གེ་ཚུ་ག་ནི་ཡང་མེད་པར་ དགའ་སྐྱིད་ཀྱི་ངང་ལུ་སྐྱོང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱིས་མཛད་པ་མཐའ་མ། ====
+<big>སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་མཆོག་ ཁྲི་ཐོག་ལུ་ལོ་བཞི་ཀྱི་རིང་བཞུགས་ཏེ་ སྤྱི་ལོ་ ༡༧༤༠ ལྕགས་སྤྲེལ་གྱི་ལོ་ལུ་ དགུན་གྱི་གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་བཞུགས་པའི་སྐབས་་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་ཡོདཔ་དང་ ལོག་སྟེ་བོན་སྦིས་ཕྱོགས་ལུ་བྱོན་བཞུགས་ནུག།</big>
+==== དགོངས་ཞུ་གི་མཛད་པ། ==== 
+<big>ལོ་ངོ་བཞི་གི་རིང་ སྡེ་སྲིད་སྦེ་བཞུགས་ཏེ་ རྒྱལ་ཁབ་ལུ་ཕྱག་ལེགས་ཤོམ་ཞུ་ཡོད་པའི་ཤུལ་མ་ འཁྲུངས་ཡུལ་མང་སྡེ་སྦོན་སྦིས་དང་ཀྲོང་གསར་ཆོས་འཁོར་རབ་བརྟན་རྩེ་ལུ་སྦེ་ ཐུགས་དམ་ལུ་བརྩོན་ཏེ་བཞུགས་ནུག། སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་འདི་སྐུ་ན་རྒས་ཏེ་ སྐུ་ཚོ་རིངམོ་སྦེ་བཞུགས་ཡོད་རུང་ གཤགཧ་ཡོད་པའི་སྤྱི་ལོ་དང་ཟླ་ཚེས་ཚུ་ གཏན་འཁེལ་སྦེ་ཤེས་མ་ཚུགསཔ་པས།
+</big>
 
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
