/* སྐུ་རྟེན་དང་གཙུག་ལག་ཁང་གསར་བཞེངས་གནང་ཡོདཔ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -114,7 +114,7 @@
 
 ===== གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ བླམ་ཁྲི་པ་ལྔ་པ་སྦེ་གསོལ་ཡོདཔ། =====
 <big>སྤྱི་ལོ་ ༡༧༣༦ ལུ་ གོང་ས་མི་ཕམ་དབང་པོ་བོད་ལུ་བྱོན་པའི་ཤུལ་མ་ དགེ་འདུན་དམངས་དང་མཁན་ཆེན་ངག་དབང་ཕྲིན་ལས། བློན་པོ་ཚུ་གིས་ གོང་ས་མི་ཕམ་དབང་པོ་ལོག་སྟེ་འབྲུག་ལུ་འབྱོན་དགོ་པའི་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ ལོག་སྟེ་འབྲུག་ལུ་བྱོན་ནུག།  སྡེ་སྲིདདང་མཁན་ཆེན་ཚུ་གིས་ གོང་ས་གི་ཞབས་བསུ་གཅར་བར་ ལྕང་གླིང་མའི་ཐང་ནང་ བྱོན་ཡོདཔ་དང་། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྡེ་སྲིད་བཅུ་གཅིག་པ་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ བླ་མ་ཁྲི་པ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
-==== སྐུ་རྟེན་དང་གཙུག་ལག་ཁང་གསར་བཞེངས་གནང་ཡོདཔ། ====
+===== སྐུ་རྟེན་དང་གཙུག་ལག་ཁང་གསར་བཞེངས་གནང་ཡོདཔ། =====
 <big>གནས་རྟེན་ལྷ་ཁང་དང་། སྤྱན་རས་གཟིགས་ལྷ་ཁང་། ཐུབ་དབང་ལྷ་ཁང་ལ་སོགས་པ་ གསར་བཞེངས་གནང་ཡོདཔ་དང་ ཧེ་མ་གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྡེ་སྲིད་བཅུ་པ་སྦེ་བཞུགས་པའི་སྐབས་ལུ་ སྤྱན་རས་གཟིགས་ལྷ་ཁང་ནང་འགོ་བརྩམས་ཡོད་མི་ གསེར་ཟངས་ཀྱིས་བཞེངས་མི་ སྤྱན་རས་གཟིགས་ཀྱི་སྐུ་འདྲ་ ཐོག་ཚད་གསུམ་འབད་མི་འདི་འཕྲོ་མཐུད་དེ་ མཇུག་བསྡུ་གནང་ནུག།</big>
 ===== གྲྭ་ཚང་ནང་སྒྲ་པའི་སྡེ་ལོག་སྟེ་བཙུགས་གནང་ཡོདཔ། =====
 <big>སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་གིས་ སྒྲ་པའི་སྡེ་ཚན་བཙུགས་གནང་ཡོད་མི་འདི་ བར་སྐབས་ཅིག་ལས་ ནང་འཁྲུག་ལུ་བརྟེན་ཏེ་ ཁ་གཏོར་སོང་མི་འདི་ སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ སློབ་དཔོན་ངག་དབང་དཔལ་ལྡན་བཟང་པོ་གདན་འདྲེན་ཞུ་ཞིནམ་ལས་ སྒྲ་པའི་སྡེ་ཚན་འདི་ ལོག་སྟེ་ར་ བཙུགས་གནང་ནུག།</big>
@@ -127,6 +127,7 @@
 
 ===== ༽ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེ་དང་དགའ་སྐྱིད། ===== 
 <big>རྒྱལ་བའི་བསྟན་པ་ལུ་ཞབས་ཏོག་དང་ མི་སེར་ཚུ་ལུ་བྱམས་པ་དང་བརྩེ་བའི་ཐོག་ལས་སྐྱོང་ནི་འདི་གིས་ ཆོས་ལུགས་དང་མི་ཚུ་ཀྱི་བར་ན་ཡང་ ཕྱོགས་རིས་མེདཔ་ལས་ སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ རྒྱལ་ཁབ་སྐྱོང་བའི་སྐབས་ རྐྱེན་ག་ནི་ཡང་མེད་པར་ ཆར་ཆུ་དུས་ལུ་བབས་ ས་ལས་ཐོན་པའི་ལོ་ཐོག་ཚུ་ལེགས་ ནད་གཞི་དང་མུ་གེ་ཚུ་ག་ནི་ཡང་མེད་པར་ དགའ་སྐྱིད་ཀྱི་ངང་ལུ་སྐྱོང་ནུག།</big>
+
 ==== སྡེ་སྲིད་ཀྱིས་མཛད་པ་མཐའ་མ། ====
 <big>སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་མཆོག་ ཁྲི་ཐོག་ལུ་ལོ་བཞི་ཀྱི་རིང་བཞུགས་ཏེ་ སྤྱི་ལོ་ ༡༧༤༠ ལྕགས་སྤྲེལ་གྱི་ལོ་ལུ་ དགུན་གྱི་གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་བཞུགས་པའི་སྐབས་་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་ཡོདཔ་དང་ ལོག་སྟེ་བོན་སྦིས་ཕྱོགས་ལུ་བྱོན་བཞུགས་ནུག།</big>
 ==== དགོངས་ཞུ་གི་མཛད་པ། ==== 
