/* ༽ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེ་དང་དགའ་སྐྱིད། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -125,7 +125,7 @@
 ===== གོང་ས་མི་ཕམ་དབང་པོ་དགོངས་པ་རྫོགས་ཡོདཔ། =====
 <big>སྤྱི་ལོ་ ༡༧༣༨ ས་རྟ་ཟླཝ་ ༤ པའི་ཚེས་ ༡༥ ལུ་ གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་ལུ་བར་ཆད་བྱུངམ་ལས་གཤགས་སོཔ་ལས་ ལོ་གཅིག་གི་རིང་ ལོ་རྒྱུས་འདི་གསང་བ་སྦེ་བཞག་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༣༩ ས་ལུག་གི་ལོ་ལུ་ གསང་བ་གྲོལ་ཞིནམ་ལས་ ས་གནས་རྟ་མགོ་ལུ་ སྡེ་སྲིད་དང་མཁན་སློབ་དགེ་འདུན་ཚུ་གྱིས་ པུར་སྦྱང་ཚུ་ཡོངས་སུ་རྫོགསཔ་སྦེ་བསྒྲུབས་གནང་ནུག།</big>
 
-===== ༽ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེ་དང་དགའ་སྐྱིད། ===== 
+===== རྒྱལ་ཁབ་ཀྱི་ཞི་བདེ་དང་དགའ་སྐྱིད། ===== 
 <big>རྒྱལ་བའི་བསྟན་པ་ལུ་ཞབས་ཏོག་དང་ མི་སེར་ཚུ་ལུ་བྱམས་པ་དང་བརྩེ་བའི་ཐོག་ལས་སྐྱོང་ནི་འདི་གིས་ ཆོས་ལུགས་དང་མི་ཚུ་ཀྱི་བར་ན་ཡང་ ཕྱོགས་རིས་མེདཔ་ལས་ སྡེ་སྲིད་ཁུ་བོ་དཔལ་འབྱོར་གྱིས་ རྒྱལ་ཁབ་སྐྱོང་བའི་སྐབས་ རྐྱེན་ག་ནི་ཡང་མེད་པར་ ཆར་ཆུ་དུས་ལུ་བབས་ ས་ལས་ཐོན་པའི་ལོ་ཐོག་ཚུ་ལེགས་ ནད་གཞི་དང་མུ་གེ་ཚུ་ག་ནི་ཡང་མེད་པར་ དགའ་སྐྱིད་ཀྱི་ངང་ལུ་སྐྱོང་ནུག།</big>
 
 ==== སྡེ་སྲིད་ཀྱིས་མཛད་པ་མཐའ་མ། ====
